@@ -9,6 +9,7 @@ import java.nio.file.Path;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Deprecated
 public abstract class IncludeHelperExpander {
 
     public static String expand(String value, Path directory) throws IOException {
@@ -27,7 +28,7 @@ public abstract class IncludeHelperExpander {
 
         // handle single line directly with the suffix (should be between quotes or double-quotes
         if(include.size() == 1) {
-            String singleInclude = include.get(0);
+            String singleInclude = include.getFirst();
             return prefix + singleInclude + suffix;
         }
 
