@@ -17,7 +17,7 @@ import picocli.CommandLine;
 import java.nio.file.Files;
 import java.util.List;
 import java.util.stream.Collectors;
-import javax.validation.ConstraintViolationException;
+import jakarta.validation.ConstraintViolationException;
 
 @CommandLine.Command(
     name = "update",
@@ -39,7 +39,7 @@ public class TemplateNamespaceUpdateCommand extends AbstractServiceNamespaceUpda
                 .filter(Files::isRegularFile)
                 .filter(YamlFlowParser::isValidExtension)
                 .map(path -> yamlFlowParser.parse(path.toFile(), Template.class))
-                .collect(Collectors.toList());
+                .toList();
 
             if (templates.isEmpty()) {
                 stdOut("No template found on '{}'", directory.toFile().getAbsolutePath());
