@@ -1,17 +1,25 @@
 package io.kestra.core.docs;
 
 import com.google.common.base.CaseFormat;
-import lombok.*;
+import io.kestra.core.models.tasks.retrys.AbstractRetry;
+import lombok.AllArgsConstructor;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.ToString;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ArrayUtils;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
+@SuppressWarnings("this-escape")
 @Getter
 @EqualsAndHashCode
 @ToString
+@Slf4j
 public abstract class AbstractClassDocumentation<T> {
     protected Boolean deprecated;
+    protected Boolean beta;
     protected String cls;
     protected String shortName;
     protected String docDescription;
@@ -20,6 +28,10 @@ public abstract class AbstractClassDocumentation<T> {
     protected Map<String, Object> defs = new TreeMap<>();
     protected Map<String, Object> inputs = new TreeMap<>();
     protected Map<String, Object> propertiesSchema;
+    private final List<String> defsExclusions = List.of(
+        "io.kestra.core.models.conditions.Condition",
+        "io.kestra.core.models.conditions.ScheduleCondition"
+    );
 
     @SuppressWarnings("unchecked")
     protected AbstractClassDocumentation(JsonSchemaGenerator jsonSchemaGenerator, Class<? extends T> cls, Class<T> baseCls) {
@@ -30,6 +42,7 @@ public abstract class AbstractClassDocumentation<T> {
 
         if (this.propertiesSchema.containsKey("$defs")) {
             this.defs.putAll((Map<String, Object>) this.propertiesSchema.get("$defs"));
+            defsExclusions.forEach(this.defs::remove);
             this.propertiesSchema.remove("$defs");
         }
 
@@ -42,7 +55,7 @@ public abstract class AbstractClassDocumentation<T> {
             .filter(entry -> !entry.getKey().equals("io.kestra.core.models.tasks.Task"))
             .map(entry -> {
                 Map<String, Object> value = (Map<String, Object>) entry.getValue();
-                value.put("properties", flatten(properties(value), required(value)));
+                value.put("properties", flatten(properties(value), required(value), isTypeToKeep(entry.getKey())));
 
                 return new AbstractMap.SimpleEntry<>(
                     entry.getKey(),
@@ -54,6 +67,7 @@ public abstract class AbstractClassDocumentation<T> {
         this.docDescription = this.propertiesSchema.containsKey("title") ? (String) this.propertiesSchema.get("title") : null;
         this.docBody = this.propertiesSchema.containsKey("description") ? (String) this.propertiesSchema.get("description") : null;
         this.deprecated = this.propertiesSchema.containsKey("$deprecated");
+        this.beta = this.propertiesSchema.containsKey("$beta");
 
         if (this.propertiesSchema.containsKey("$examples")) {
             List<Map<String, Object>> examples = (List<Map<String, Object>>) this.propertiesSchema.get("$examples");
@@ -70,7 +84,7 @@ public abstract class AbstractClassDocumentation<T> {
                         (String) r.get("code")
                     ))
                 ))
-                .collect(Collectors.toList());
+                .toList();
         }
 
         if (this.propertiesSchema.containsKey("properties")) {
@@ -80,7 +94,14 @@ public abstract class AbstractClassDocumentation<T> {
 
     protected static Map<String, Object> flatten(Map<String, Object> map, List<String> required) {
         map.remove("type");
-        return flatten(map, required, null);
+        return flatten(map, required, (String) null);
+    }
+
+    protected static Map<String, Object> flatten(Map<String, Object> map, List<String> required, Boolean keepType) {
+        if (!keepType) {
+            map.remove("type");
+        }
+        return flatten(map, required, (String) null);
     }
 
     @SuppressWarnings("unchecked")
@@ -99,6 +120,8 @@ public abstract class AbstractClassDocumentation<T> {
             Map<String, Object> finalValue = (Map<String, Object>) current.getValue();
             if (required.contains(current.getKey())) {
                 finalValue.put("$required", true);
+            } else {
+                finalValue.put("$required", false);
             }
 
             result.put(flattenKey(current.getKey(), parentName), finalValue);
@@ -112,6 +135,19 @@ public abstract class AbstractClassDocumentation<T> {
         }
 
         return result;
+    }
+
+    // Some task can have the `type` property but not to represent the task
+    // so we cant to keep it in the doc
+    private Boolean isTypeToKeep(String key){
+        try {
+            if (AbstractRetry.class.isAssignableFrom(Class.forName(key))) {
+                return true;
+            }
+        } catch (ClassNotFoundException ignored) {
+            log.debug(ignored.getMessage(), ignored);
+        }
+        return false;
     }
 
     protected static String flattenKey(String current, String parent) {
