@@ -12,41 +12,53 @@ import com.github.victools.jsonschema.generator.impl.DefinitionKey;
 import com.github.victools.jsonschema.generator.naming.DefaultSchemaDefinitionNamingStrategy;
 import com.github.victools.jsonschema.module.jackson.JacksonModule;
 import com.github.victools.jsonschema.module.jackson.JacksonOption;
-import com.github.victools.jsonschema.module.javax.validation.JavaxValidationModule;
-import com.github.victools.jsonschema.module.javax.validation.JavaxValidationOption;
+import com.github.victools.jsonschema.module.jakarta.validation.JakartaValidationModule;
+import com.github.victools.jsonschema.module.jakarta.validation.JakartaValidationOption;
 import com.github.victools.jsonschema.module.swagger2.Swagger2Module;
 import com.google.common.collect.ImmutableMap;
 import io.kestra.core.models.annotations.Plugin;
 import io.kestra.core.models.annotations.PluginProperty;
 import io.kestra.core.models.conditions.Condition;
 import io.kestra.core.models.conditions.ScheduleCondition;
-import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.tasks.Output;
 import io.kestra.core.models.tasks.Task;
+import io.kestra.core.models.tasks.runners.TaskRunner;
 import io.kestra.core.models.triggers.AbstractTrigger;
+import io.kestra.core.plugins.PluginRegistry;
 import io.kestra.core.plugins.RegisteredPlugin;
 import io.kestra.core.serializers.JacksonMapper;
-import io.kestra.core.services.PluginService;
 import io.micronaut.core.annotation.Nullable;
 import io.swagger.v3.oas.annotations.media.Schema;
-
-import java.lang.reflect.*;
-import java.time.Duration;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
-
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.lang.reflect.ParameterizedType;
+import java.time.Duration;
+import java.util.*;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
 @Singleton
 public class JsonSchemaGenerator {
+
+    private final PluginRegistry pluginRegistry;
+
     @Inject
-    private PluginService pluginService;
+    public JsonSchemaGenerator(final PluginRegistry pluginRegistry) {
+        this.pluginRegistry = pluginRegistry;
+    }
 
     Map<Class<?>, Object> defaultInstances = new HashMap<>();
 
     public <T> Map<String, Object> schemas(Class<? extends T> cls) {
+        return this.schemas(cls, false);
+    }
+
+    public <T> Map<String, Object> schemas(Class<? extends T> cls, boolean arrayOf) {
         SchemaGeneratorConfigBuilder builder = new SchemaGeneratorConfigBuilder(
             SchemaVersion.DRAFT_7,
             OptionPreset.PLAIN_JSON
@@ -59,24 +71,23 @@ public class JsonSchemaGenerator {
         SchemaGenerator generator = new SchemaGenerator(schemaGeneratorConfig);
         try {
             ObjectNode objectNode = generator.generateSchema(cls);
-
-            Map<String, Object> map = JacksonMapper.toMap(objectNode);
-
-            // hack
-            if (cls == Flow.class) {
-                fixFlow(map);
-                fixCondition(map);
-            } else if (cls == Task.class) {
-                fixTask(map);
-            } else if (cls == AbstractTrigger.class) {
-                fixTrigger(map);
-                fixCondition(map);
+            if (arrayOf) {
+                objectNode.put("type", "array");
             }
+            replaceAnyOfWithOneOf(objectNode);
 
-            return map;
+            return JacksonMapper.toMap(objectNode);
         } catch (IllegalArgumentException e) {
             throw new IllegalArgumentException("Unable to generate jsonschema for '" + cls.getName() + "'", e);
         }
+    }
+
+    private static void replaceAnyOfWithOneOf(ObjectNode objectNode) {
+        objectNode.findParents("anyOf").forEach(jsonNode -> {
+            if (jsonNode instanceof ObjectNode oNode) {
+                oNode.set("oneOf", oNode.remove("anyOf"));
+            }
+        });
     }
 
     private void mutateDescription(ObjectNode collectedTypeAttributes) {
@@ -107,42 +118,6 @@ public class JsonSchemaGenerator {
 
             collectedTypeAttributes.set("markdownDescription", new TextNode(sb.toString()));
         }
-    }
-
-    @SuppressWarnings("unchecked")
-    private static void fixFlow(Map<String, Object> map) {
-        var definitions = (Map<String, Map<String, Object>>) map.get("definitions");
-        var flow = definitions.get("io.kestra.core.models.flows.Flow");
-
-        var requireds = (List<String>) flow.get("required");
-        requireds.remove("deleted");
-
-        var properties = (Map<String, Object>) flow.get("properties");
-        properties.remove("deleted");
-    }
-
-    @SuppressWarnings("unchecked")
-    private static void fixTask(Map<String, Object> map) {
-        var definitions = (Map<String, Map<String, Object>>) map.get("definitions");
-        var task = definitions.get("io.kestra.core.models.tasks.Task-2");
-        var allOf = (List<Object>) task.get("allOf");
-        allOf.remove(1);
-    }
-
-    @SuppressWarnings("unchecked")
-    private static void fixTrigger(Map<String, Object> map) {
-        var definitions = (Map<String, Map<String, Object>>) map.get("definitions");
-        var trigger = definitions.get("io.kestra.core.models.triggers.AbstractTrigger-2");
-        var allOf = (List<Object>) trigger.get("allOf");
-        allOf.remove(1);
-    }
-
-    @SuppressWarnings("unchecked")
-    private static void fixCondition(Map<String, Object> map) {
-        var definitions = (Map<String, Map<String, Object>>) map.get("definitions");
-        var condition = definitions.get("io.kestra.core.models.conditions.Condition-2");
-        var allOf = (List<Object>) condition.get("allOf");
-        allOf.remove(1);
     }
 
     public <T> Map<String, Object> properties(Class<T> base, Class<? extends T> cls) {
@@ -177,10 +152,10 @@ public class JsonSchemaGenerator {
     protected void build(SchemaGeneratorConfigBuilder builder, boolean draft7) {
         builder
 
-            .with(new JavaxValidationModule(
-                JavaxValidationOption.NOT_NULLABLE_METHOD_IS_REQUIRED,
-                JavaxValidationOption.NOT_NULLABLE_FIELD_IS_REQUIRED,
-                JavaxValidationOption.INCLUDE_PATTERN_EXPRESSIONS
+            .with(new JakartaValidationModule(
+                JakartaValidationOption.NOT_NULLABLE_METHOD_IS_REQUIRED,
+                JakartaValidationOption.NOT_NULLABLE_FIELD_IS_REQUIRED,
+                JakartaValidationOption.INCLUDE_PATTERN_EXPRESSIONS
             ))
             .with(new Swagger2Module())
             .with(Option.DEFINITIONS_FOR_ALL_OBJECTS)
@@ -241,10 +216,18 @@ public class JsonSchemaGenerator {
             PluginProperty pluginPropertyAnnotation = member.getAnnotationConsideringFieldAndGetter(PluginProperty.class);
             if (pluginPropertyAnnotation != null) {
                 memberAttributes.put("$dynamic", pluginPropertyAnnotation.dynamic());
+                if (pluginPropertyAnnotation.beta()) {
+                    memberAttributes.put("$beta", true);
+                }
             }
 
             Schema schema = member.getAnnotationConsideringFieldAndGetter(Schema.class);
             if (schema != null && schema.deprecated()) {
+                memberAttributes.put("$deprecated", true);
+            }
+
+            Deprecated deprecated = member.getAnnotationConsideringFieldAndGetter(Deprecated.class);
+            if (deprecated != null) {
                 memberAttributes.put("$deprecated", true);
             }
         });
@@ -262,7 +245,7 @@ public class JsonSchemaGenerator {
                             .put("lang", example.lang())
                             .put("title", example.title())
                         )
-                        .collect(Collectors.toList());
+                        .toList();
 
                     if (!examples.isEmpty()) {
                         collectedTypeAttributes.set("$examples", context.getGeneratorConfig().createArrayNode().addAll(examples));
@@ -276,10 +259,14 @@ public class JsonSchemaGenerator {
                             .put("unit", metric.unit())
                             .put("description", metric.description())
                         )
-                        .collect(Collectors.toList());
+                        .toList();
 
                     if (!metrics.isEmpty()) {
                         collectedTypeAttributes.set("$metrics", context.getGeneratorConfig().createArrayNode().addAll(metrics));
+                    }
+
+                    if (pluginAnnotation.beta()) {
+                        collectedTypeAttributes.put("$beta", true);
                     }
                 }
 
@@ -304,32 +291,42 @@ public class JsonSchemaGenerator {
             builder.forTypesInGeneral()
                 .withSubtypeResolver((declaredType, context) -> {
                     TypeContext typeContext = context.getTypeContext();
-
                     if (declaredType.getErasedType() == Task.class) {
                         return getRegisteredPlugins()
                             .stream()
                             .flatMap(registeredPlugin -> registeredPlugin.getTasks().stream())
+                            .filter(Predicate.not(io.kestra.core.models.Plugin::isInternal))
                             .map(clz -> typeContext.resolveSubtype(declaredType, clz))
-                            .collect(Collectors.toList());
+                            .toList();
                     } else if (declaredType.getErasedType() == AbstractTrigger.class) {
                         return getRegisteredPlugins()
                             .stream()
                             .flatMap(registeredPlugin -> registeredPlugin.getTriggers().stream())
+                            .filter(Predicate.not(io.kestra.core.models.Plugin::isInternal))
                             .map(clz -> typeContext.resolveSubtype(declaredType, clz))
-                            .collect(Collectors.toList());
+                            .toList();
                     } else if (declaredType.getErasedType() == Condition.class) {
                         return getRegisteredPlugins()
                             .stream()
                             .flatMap(registeredPlugin -> registeredPlugin.getConditions().stream())
+                            .filter(Predicate.not(io.kestra.core.models.Plugin::isInternal))
                             .map(clz -> typeContext.resolveSubtype(declaredType, clz))
-                            .collect(Collectors.toList());
+                            .toList();
                     } else if (declaredType.getErasedType() == ScheduleCondition.class) {
                         return getRegisteredPlugins()
                             .stream()
                             .flatMap(registeredPlugin -> registeredPlugin.getConditions().stream())
                             .filter(ScheduleCondition.class::isAssignableFrom)
+                            .filter(Predicate.not(io.kestra.core.models.Plugin::isInternal))
                             .map(clz -> typeContext.resolveSubtype(declaredType, clz))
-                            .collect(Collectors.toList());
+                            .toList();
+                    } else if (declaredType.getErasedType() == TaskRunner.class) {
+                        return getRegisteredPlugins()
+                            .stream()
+                            .flatMap(registeredPlugin -> registeredPlugin.getTaskRunners().stream())
+                            .filter(Predicate.not(io.kestra.core.models.Plugin::isInternal))
+                            .map(clz -> typeContext.resolveSubtype(declaredType, clz))
+                            .toList();
                     }
 
                     return null;
@@ -399,12 +396,25 @@ public class JsonSchemaGenerator {
                     collectedTypeAttributes.remove("$examples");
                 }
             });
+
+            // Ensure that `type` is defined as a constant in JSON Schema.
+            // The `const` property is used by editors for auto-completion based on that schema.
+            builder.forTypesInGeneral().withTypeAttributeOverride((collectedTypeAttributes, scope, context) -> {
+                final Class<?> pluginType = scope.getType().getErasedType();
+                if (pluginType.getAnnotation(Plugin.class) != null) {
+                    ObjectNode properties = (ObjectNode) collectedTypeAttributes.get("properties");
+                    if (properties != null) {
+                        properties.set("type", context.getGeneratorConfig().createObjectNode()
+                            .put("const", pluginType.getName())
+                        );
+                    }
+                }
+            });
         }
     }
 
     protected List<RegisteredPlugin> getRegisteredPlugins() {
-        return pluginService
-            .allPlugins();
+        return pluginRegistry.plugins();
     }
 
     private boolean defaultInAllOf(JsonNode property) {
@@ -437,6 +447,7 @@ public class JsonSchemaGenerator {
         SchemaGenerator generator = new SchemaGenerator(schemaGeneratorConfig);
         try {
             ObjectNode objectNode = generator.generateSchema(cls);
+            replaceAnyOfWithOneOf(objectNode);
 
             return JacksonMapper.toMap(extractMainRef(objectNode));
         } catch (IllegalArgumentException e) {
@@ -521,6 +532,9 @@ public class JsonSchemaGenerator {
         }
         if (mainClassDef.has("$deprecated")) {
             objectNode.set("$deprecated", mainClassDef.get("$deprecated"));
+        }
+        if (mainClassDef.has("$beta")) {
+            objectNode.set("$beta", mainClassDef.get("$beta"));
         }
     }
 
