@@ -8,7 +8,7 @@ import lombok.Value;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 
 @Value
 @AllArgsConstructor
@@ -34,6 +34,6 @@ public class WorkerTaskResult {
         this.dynamicTaskRuns = dynamicWorkerResults
             .stream()
             .map(WorkerTaskResult::getTaskRun)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
