@@ -1,35 +1,44 @@
 package io.kestra.core.schedulers;
 
 import com.google.common.base.Throwables;
+import com.google.common.collect.ImmutableMap;
 import io.kestra.core.exceptions.InternalException;
 import io.kestra.core.metrics.MetricRegistry;
+import io.kestra.core.models.conditions.Condition;
 import io.kestra.core.models.conditions.ConditionContext;
 import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.executions.ExecutionKilled;
+import io.kestra.core.models.executions.ExecutionKilledTrigger;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.FlowWithException;
-import io.kestra.core.models.triggers.AbstractTrigger;
-import io.kestra.core.models.triggers.PollingTriggerInterface;
-import io.kestra.core.models.triggers.Trigger;
-import io.kestra.core.models.triggers.TriggerContext;
-import io.kestra.core.models.triggers.types.Schedule;
+import io.kestra.core.models.flows.State;
+import io.kestra.core.models.triggers.*;
+import io.kestra.plugin.core.trigger.Schedule;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.queues.WorkerTriggerResultQueueInterface;
 import io.kestra.core.runners.*;
+import io.kestra.core.server.Service;
+import io.kestra.core.server.ServiceStateChangeEvent;
 import io.kestra.core.services.*;
 import io.kestra.core.utils.Await;
+import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.ListUtils;
 import io.micronaut.context.ApplicationContext;
+import io.micronaut.context.event.ApplicationEventPublisher;
 import io.micronaut.inject.qualifiers.Qualifiers;
+import jakarta.annotation.Nullable;
 import jakarta.annotation.PreDestroy;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.experimental.SuperBuilder;
 import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
+import org.slf4j.event.Level;
 
 import java.time.Duration;
 import java.time.Instant;
@@ -37,37 +46,53 @@ import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.*;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.BiConsumer;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Slf4j
 @Singleton
-public abstract class AbstractScheduler implements Scheduler {
+@SuppressWarnings("this-escape")
+public abstract class AbstractScheduler implements Scheduler, Service {
     protected final ApplicationContext applicationContext;
     private final QueueInterface<Execution> executionQueue;
     private final QueueInterface<Trigger> triggerQueue;
     private final QueueInterface<WorkerJob> workerTaskQueue;
     private final WorkerTriggerResultQueueInterface workerTriggerResultQueue;
+    private final QueueInterface<ExecutionKilled> executionKilledQueue;
     protected final FlowListenersInterface flowListeners;
     private final RunContextFactory runContextFactory;
+    private final RunContextInitializer runContextInitializer;
     private final MetricRegistry metricRegistry;
     private final ConditionService conditionService;
-    private final TaskDefaultService taskDefaultService;
+    private final PluginDefaultService pluginDefaultService;
     private final WorkerGroupService workerGroupService;
-    protected Boolean isReady = false;
+    private final LogService logService;
+
+    // must be volatile as it's updated by the flow listener thread and read by the scheduleExecutor thread
+    private volatile Boolean isReady = false;
 
     private final ScheduledExecutorService scheduleExecutor = Executors.newSingleThreadScheduledExecutor();
-    private final Map<String, ZonedDateTime> lastEvaluate = new ConcurrentHashMap<>();
 
-    // The triggerStateSavedLock must be used when accessing triggerStateSaved
-    private final Object triggerStateSavedLock = new Object();
-    private final Map<String, Trigger> triggerStateSaved = new ConcurrentHashMap<>();
     protected SchedulerTriggerStateInterface triggerState;
 
     // schedulable and schedulableNextDate must be volatile and their access synchronized as they are updated and read by different threads.
     @Getter
-    private volatile List<FlowWithTrigger> schedulable = new ArrayList<>();
+    private volatile List<FlowWithTriggers> schedulable = new ArrayList<>();
     @Getter
-    private volatile Map<String, FlowWithPollingTriggerNextDate> schedulableNextDate = new ConcurrentHashMap<>();
+    private volatile Map<String, FlowWithWorkerTriggerNextDate> schedulableNextDate = new ConcurrentHashMap<>();
+
+    private final String id = IdUtils.create();
+
+    private final AtomicBoolean shutdown = new AtomicBoolean(false);
+
+    private final AtomicReference<ServiceState> state = new AtomicReference<>();
+    private final ApplicationEventPublisher<ServiceStateChangeEvent> eventPublisher;
+    protected final List<Runnable> receiveCancellations = new ArrayList<>();
 
     @SuppressWarnings("unchecked")
     @Inject
@@ -79,18 +104,28 @@ public abstract class AbstractScheduler implements Scheduler {
         this.executionQueue = applicationContext.getBean(QueueInterface.class, Qualifiers.byName(QueueFactoryInterface.EXECUTION_NAMED));
         this.triggerQueue = applicationContext.getBean(QueueInterface.class, Qualifiers.byName(QueueFactoryInterface.TRIGGER_NAMED));
         this.workerTaskQueue = applicationContext.getBean(QueueInterface.class, Qualifiers.byName(QueueFactoryInterface.WORKERJOB_NAMED));
+        this.executionKilledQueue = applicationContext.getBean(QueueInterface.class, Qualifiers.byName(QueueFactoryInterface.KILL_NAMED));
         this.workerTriggerResultQueue = applicationContext.getBean(WorkerTriggerResultQueueInterface.class);
         this.flowListeners = flowListeners;
         this.runContextFactory = applicationContext.getBean(RunContextFactory.class);
+        this.runContextInitializer = applicationContext.getBean(RunContextInitializer.class);
         this.metricRegistry = applicationContext.getBean(MetricRegistry.class);
         this.conditionService = applicationContext.getBean(ConditionService.class);
-        this.taskDefaultService = applicationContext.getBean(TaskDefaultService.class);
+        this.pluginDefaultService = applicationContext.getBean(PluginDefaultService.class);
         this.workerGroupService = applicationContext.getBean(WorkerGroupService.class);
+        this.logService = applicationContext.getBean(LogService.class);
+        this.eventPublisher = applicationContext.getBean(ApplicationEventPublisher.class);
+        setState(ServiceState.CREATED);
+    }
+
+    protected boolean isReady() {
+        return isReady;
     }
 
     @Override
     public void run() {
-        flowListeners.run();
+        this.flowListeners.run();
+        this.flowListeners.listen(this::initializedTriggers);
 
         ScheduledFuture<?> handle = scheduleExecutor.scheduleAtFixedRate(
             this::handle,
@@ -99,10 +134,8 @@ public abstract class AbstractScheduler implements Scheduler {
             TimeUnit.SECONDS
         );
 
-        flowListeners.listen(this::computeSchedulable);
-
         // look at exception on the main thread
-        Thread thread = new Thread(
+        Thread.ofVirtual().name("scheduler-listener").start(
             () -> {
                 Await.until(handle::isDone);
 
@@ -111,151 +144,301 @@ public abstract class AbstractScheduler implements Scheduler {
                 } catch (CancellationException ignored) {
 
                 } catch (ExecutionException | InterruptedException e) {
-                    log.error("Executor fatal exception", e);
+                    log.error("Scheduler fatal exception", e);
+                    close();
                     applicationContext.close();
-                    Runtime.getRuntime().exit(1);
                 }
-            },
-            "scheduler-listener"
+            }
         );
-        thread.start();
 
-        // remove trigger on flow update
+        // remove trigger on flow update, update local triggers store, and stop the trigger on the worker
         this.flowListeners.listen((flow, previous) -> {
-            synchronized (triggerStateSavedLock) {
-                if (flow.isDeleted()) {
-                    ListUtils.emptyOnNull(flow.getTriggers())
-                        .forEach(abstractTrigger -> {
-                            Trigger trigger = Trigger.of(flow, abstractTrigger);
+            if (flow.isDeleted() || previous != null) {
+                List<AbstractTrigger> triggersDeleted = flow.isDeleted() ?
+                    ListUtils.emptyOnNull(flow.getTriggers()) :
+                    FlowService.findRemovedTrigger(flow, previous);
 
-                            triggerStateSaved.remove(trigger.uid());
-                            triggerQueue.delete(trigger);
-                        });
-                } else if (previous != null) {
-                    FlowService
-                        .findRemovedTrigger(flow, previous)
-                        .forEach(abstractTrigger -> {
-                            Trigger trigger = Trigger.of(flow, abstractTrigger);
+                triggersDeleted.forEach(abstractTrigger -> {
+                    Trigger trigger = Trigger.of(flow, abstractTrigger);
+                    this.triggerQueue.delete(trigger);
 
-                            triggerStateSaved.remove(trigger.uid());
-                            triggerQueue.delete(trigger);
-                        });
-                }
+                    this.executionKilledQueue.emit(ExecutionKilledTrigger
+                        .builder()
+                        .tenantId(trigger.getTenantId())
+                        .namespace(trigger.getNamespace())
+                        .flowId(trigger.getFlowId())
+                        .triggerId(trigger.getTriggerId())
+                        .build()
+                    );
+                });
+
+            }
+
+            if (previous != null) {
+                FlowService.findUpdatedTrigger(flow, previous)
+                    .forEach(abstractTrigger -> {
+                        if (abstractTrigger instanceof WorkerTriggerInterface) {
+                            RunContext runContext = runContextFactory.of(flow, abstractTrigger);
+                            ConditionContext conditionContext = conditionService.conditionContext(runContext, flow, null);
+
+                            try {
+                                this.triggerState.update(flow, abstractTrigger, conditionContext);
+                            } catch (Exception e) {
+                                logError(conditionContext, flow, abstractTrigger, e);
+                            }
+
+                            Trigger trigger = Trigger.of(flow, abstractTrigger);
+                            this.executionKilledQueue.emit(ExecutionKilledTrigger
+                                .builder()
+                                .tenantId(trigger.getTenantId())
+                                .namespace(trigger.getNamespace())
+                                .flowId(trigger.getFlowId())
+                                .triggerId(trigger.getTriggerId())
+                                .build()
+                            );
+                        }
+                    });
             }
         });
 
-        // listen to WorkerTriggerResult from polling triggers
-        this.workerTriggerResultQueue.receive(
+        // listen to WorkerTriggerResult from worker triggers
+        this.receiveCancellations.add(this.workerTriggerResultQueue.receive(
             null,
             Scheduler.class,
             either -> {
                 if (either.isRight()) {
                     log.error("Unable to deserialize a worker trigger result: {}", either.getRight().getMessage());
+
                     return;
                 }
 
                 WorkerTriggerResult workerTriggerResult = either.getLeft();
-                if (workerTriggerResult.getSuccess() && workerTriggerResult.getExecution().isPresent()) {
-                    var triggerExecution = new SchedulerExecutionWithTrigger(
+                if (workerTriggerResult.getTrigger() instanceof RealtimeTriggerInterface && workerTriggerResult.getExecution().isPresent()) {
+                    this.emitExecution(workerTriggerResult.getExecution().get(), workerTriggerResult.getTriggerContext());
+                } else if (workerTriggerResult.getSuccess() && workerTriggerResult.getExecution().isPresent()) {
+                    SchedulerExecutionWithTrigger triggerExecution = new SchedulerExecutionWithTrigger(
                         workerTriggerResult.getExecution().get(),
                         workerTriggerResult.getTriggerContext()
                     );
-                    this.handleEvaluatePollingTriggerResult(triggerExecution);
-                }
-                else {
-                    // previously, if no interval the trigger was executed immediately. I think only the Schedule trigger has no interval
-                    // now that all triggers are sent to the worker, we need to do this to avoid issues with backfills
-                    // as the same trigger will be evaluated multiple-time which is not supported by the 'addToRunning' method
-                    // if the trigger didn't trigger an execution, we will need to clear the evaluation lock
-                    // TODO now that Schedule is executed by the Scheduler this could be relaxed
-                    if (workerTriggerResult.getTrigger() instanceof PollingTriggerInterface &&
-                        ((PollingTriggerInterface) workerTriggerResult.getTrigger()).getInterval() != null) {
-                        var triggerNotRunning = Trigger.of(workerTriggerResult.getTriggerContext());
-                        triggerState.save(triggerNotRunning);
-                    }
+                    ZonedDateTime nextExecutionDate = this.nextEvaluationDate(workerTriggerResult.getTrigger());
+                    this.handleEvaluateWorkerTriggerResult(triggerExecution, nextExecutionDate);
+                } else {
+                    ZonedDateTime nextExecutionDate = this.nextEvaluationDate(workerTriggerResult.getTrigger());
+                    this.triggerState.update(Trigger.of(workerTriggerResult.getTriggerContext(), nextExecutionDate));
                 }
             }
-        );
+        ));
+        setState(ServiceState.RUNNING);
     }
 
-    // must be synchronized as it update schedulableNextDate and schedulable, and will be executed on the flow listener thread
-    private synchronized void computeSchedulable(List<Flow> flows) {
-        this.schedulableNextDate = new HashMap<>();
+    // Initialized local trigger state,
+    // and if some flows were created outside the box, for example from the CLI,
+    // then we may have some triggers that are not created yet.
+    private void initializedTriggers(List<Flow> flows) {
+        record FlowAndTrigger(Flow flow, AbstractTrigger trigger) {
+        }
+        List<Trigger> triggers = triggerState.findAllForAllTenants();
 
-        this.schedulable = flows
+        flows
             .stream()
+            .filter(flow -> flow.getTriggers() != null && !flow.getTriggers().isEmpty())
+            .flatMap(flow -> flow.getTriggers().stream().filter(trigger -> trigger instanceof WorkerTriggerInterface).map(trigger -> new FlowAndTrigger(flow, trigger)))
+            .forEach(flowAndTrigger -> {
+                Optional<Trigger> trigger = triggers.stream().filter(t -> t.uid().equals(Trigger.uid(flowAndTrigger.flow(), flowAndTrigger.trigger()))).findFirst(); // must have one or none
+                if (trigger.isEmpty()) {
+                    RunContext runContext = runContextFactory.of(flowAndTrigger.flow(), flowAndTrigger.trigger());
+                    ConditionContext conditionContext = conditionService.conditionContext(runContext, flowAndTrigger.flow(), null);
+                    try {
+                        // new worker triggers will be evaluated immediately except schedule that will be evaluated at the next cron schedule
+                        ZonedDateTime nextExecutionDate = flowAndTrigger.trigger() instanceof Schedule schedule ? schedule.nextEvaluationDate(conditionContext, Optional.empty()) : now();
+                        Trigger newTrigger = Trigger.builder()
+                            .tenantId(flowAndTrigger.flow().getTenantId())
+                            .namespace(flowAndTrigger.flow().getNamespace())
+                            .flowId(flowAndTrigger.flow().getId())
+                            .triggerId(flowAndTrigger.trigger().getId())
+                            .date(now())
+                            .nextExecutionDate(nextExecutionDate)
+                            .stopAfter(flowAndTrigger.trigger().getStopAfter())
+                            .build();
+                        this.triggerState.create(newTrigger);
+                    } catch (Exception e) {
+                        logError(conditionContext, flowAndTrigger.flow(), flowAndTrigger.trigger(), e);
+                    }
+                } else if (flowAndTrigger.trigger() instanceof Schedule schedule) {
+                    // we recompute the Schedule nextExecutionDate if needed
+                    RunContext runContext = runContextFactory.of(flowAndTrigger.flow(), flowAndTrigger.trigger());
+                    Schedule.RecoverMissedSchedules recoverMissedSchedules = Optional.ofNullable(schedule.getRecoverMissedSchedules()).orElseGet(() -> schedule.defaultRecoverMissedSchedules(runContext));
+                    if (recoverMissedSchedules == Schedule.RecoverMissedSchedules.LAST) {
+                        ConditionContext conditionContext = conditionService.conditionContext(runContext, flowAndTrigger.flow(), null);
+                        ZonedDateTime previousDate = schedule.previousEvaluationDate(conditionContext);
+                        if (previousDate.isAfter(trigger.get().getDate())) {
+                            Trigger updated = trigger.get().toBuilder().nextExecutionDate(previousDate).build();
+                            this.triggerState.update(updated);
+                        }
+                    } else if (recoverMissedSchedules == Schedule.RecoverMissedSchedules.NONE) {
+                        Trigger updated = trigger.get().toBuilder().nextExecutionDate(schedule.nextEvaluationDate()).build();
+                        this.triggerState.update(updated);
+                    }
+                }
+            });
+
+        this.isReady = true;
+    }
+
+    private ZonedDateTime nextEvaluationDate(AbstractTrigger abstractTrigger) {
+        if (abstractTrigger instanceof PollingTriggerInterface interval) {
+            return interval.nextEvaluationDate();
+        } else {
+            return ZonedDateTime.now();
+        }
+    }
+
+    private ZonedDateTime nextEvaluationDate(AbstractTrigger abstractTrigger, ConditionContext conditionContext, Optional<? extends TriggerContext> last) throws Exception {
+        if (abstractTrigger instanceof PollingTriggerInterface interval) {
+            return interval.nextEvaluationDate(conditionContext, last);
+        } else {
+            return ZonedDateTime.now();
+        }
+    }
+
+    private Duration interval(AbstractTrigger abstractTrigger) {
+        if (abstractTrigger instanceof PollingTriggerInterface interval) {
+            return interval.getInterval();
+        } else {
+            return Duration.ofSeconds(1);
+        }
+    }
+
+    private List<FlowWithTriggers> computeSchedulable(List<Flow> flows, List<Trigger> triggerContextsToEvaluate, ScheduleContextInterface scheduleContext) {
+        List<String> flowToKeep = triggerContextsToEvaluate.stream().map(Trigger::getFlowId).toList();
+
+        return flows
+            .stream()
+            .filter(flow -> flowToKeep.contains(flow.getId()))
             .filter(flow -> flow.getTriggers() != null && !flow.getTriggers().isEmpty())
             .filter(flow -> !flow.isDisabled() && !(flow instanceof FlowWithException))
             .flatMap(flow -> flow.getTriggers()
                 .stream()
-                .filter(abstractTrigger -> !abstractTrigger.isDisabled() && abstractTrigger instanceof PollingTriggerInterface)
-                .map(trigger -> {
-                    RunContext runContext = runContextFactory.of(flow, trigger);
-
-                    return new FlowWithTrigger(
+                .filter(abstractTrigger -> !abstractTrigger.isDisabled() && abstractTrigger instanceof WorkerTriggerInterface)
+                .map(abstractTrigger -> {
+                    RunContext runContext = runContextFactory.of(flow, abstractTrigger);
+                    ConditionContext conditionContext = conditionService.conditionContext(runContext, flow, null);
+                    Trigger triggerContext = null;
+                    Trigger lastTrigger = triggerContextsToEvaluate
+                        .stream()
+                        .filter(triggerContextToFind -> triggerContextToFind.uid().equals(Trigger.uid(flow, abstractTrigger)))
+                        .findFirst()
+                        .orElse(null);
+                    // If a trigger is not found in triggers to evaluate, then we ignore it
+                    if (lastTrigger == null) {
+                        return null;
+                        // Backwards compatibility: we add a next execution date that we compute, this avoids re-triggering all existing triggers
+                    } else if (lastTrigger.getNextExecutionDate() == null) {
+                        try {
+                            triggerContext = lastTrigger.toBuilder()
+                                .nextExecutionDate(this.nextEvaluationDate(abstractTrigger, conditionContext, Optional.of(lastTrigger)))
+                                .build();
+                        } catch (Exception e) {
+                            logError(conditionContext, flow, abstractTrigger, e);
+                            return null;
+                        }
+                        this.triggerState.save(triggerContext, scheduleContext);
+                    } else {
+                        triggerContext = lastTrigger;
+                    }
+                    return new FlowWithTriggers(
                         flow,
-                        trigger,
+                        abstractTrigger,
+                        triggerContext,
                         runContext,
-                        conditionService.conditionContext(runContext, flow, null)
+                        conditionContext.withVariables(
+                            ImmutableMap.of("trigger",
+                                ImmutableMap.of("date", triggerContext.getNextExecutionDate() != null ?
+                                    triggerContext.getNextExecutionDate() : now())
+                            ))
                     );
                 })
             )
-            .toList();
+            .filter(Objects::nonNull).toList();
+    }
+
+    abstract public void handleNext(List<Flow> flows, ZonedDateTime now, BiConsumer<List<Trigger>, ScheduleContextInterface> consumer);
+
+    public List<FlowWithTriggers> schedulerTriggers() {
+        Map<String, Flow> flows = this.flowListeners.flows()
+            .stream()
+            .collect(Collectors.toMap(Flow::uidWithoutRevision, Function.identity()));
+
+        return this.triggerState.findAllForAllTenants().stream()
+            .filter(trigger -> flows.containsKey(trigger.flowUid()))
+            .map(trigger ->
+                new FlowWithTriggers(
+                    flows.get(trigger.flowUid()),
+                    flows.get(trigger.flowUid()).getTriggers().stream().filter(t -> t.getId().equals(trigger.getTriggerId())).findFirst().orElse(null),
+                    trigger,
+                    null,
+                    null
+                )
+            ).toList();
     }
 
     private void handle() {
-        if (!this.isReady) {
+        if (!isReady()) {
             log.warn("Scheduler is not ready, waiting");
+            return;
         }
-
-        metricRegistry
-            .counter(MetricRegistry.SCHEDULER_LOOP_COUNT)
-            .increment();
 
         ZonedDateTime now = now();
 
-        if (log.isTraceEnabled()) {
-            log.trace(
-                "Scheduler next iteration for {} with {} schedulables of {} flows",
-                now,
-                schedulable.size(),
-                this.flowListeners.flows().size()
-            );
-        }
+        this.handleNext(this.flowListeners.flows(), now, (triggers, scheduleContext) -> {
+            if (triggers.isEmpty()) {
+                return;
+            }
 
-        synchronized (this) {
-            // get all triggers that are ready from evaluation
-            List<FlowWithPollingTriggerNextDate> readyForEvaluate = schedulable
+            triggers.forEach(trigger -> schedulableNextDate.remove(trigger.uid()));
+            List<Trigger> triggerContextsToEvaluate = triggers.stream()
+                .filter(trigger -> Boolean.FALSE.equals(trigger.getDisabled()))
+                .toList();
+
+            List<FlowWithTriggers> schedulable = this.computeSchedulable(flowListeners.flows(), triggerContextsToEvaluate, scheduleContext);
+
+            metricRegistry
+                .counter(MetricRegistry.SCHEDULER_LOOP_COUNT)
+                .increment();
+
+            if (log.isTraceEnabled()) {
+                log.trace(
+                    "Scheduler next iteration for {} with {} schedulables of {} flows",
+                    now,
+                    schedulable.size(),
+                    this.flowListeners.flows().size()
+                );
+            }
+
+            // Get all triggers that are ready for evaluation
+            List<FlowWithWorkerTriggerNextDate> readyForEvaluate = schedulable
                 .stream()
-                .filter(f -> conditionService.isValid(f.getFlow(), f.getTrigger(), f.getConditionContext()))
-                .map(flowWithTrigger -> FlowWithPollingTrigger.builder()
-                    .flow(flowWithTrigger.getFlow())
-                    .trigger(flowWithTrigger.getTrigger())
-                    .pollingTrigger((PollingTriggerInterface) flowWithTrigger.getTrigger())
-                    .conditionContext(flowWithTrigger.getConditionContext())
-                    .triggerContext(TriggerContext
-                        .builder()
-                        .tenantId(flowWithTrigger.getFlow().getTenantId())
-                        .namespace(flowWithTrigger.getFlow().getNamespace())
-                        .flowId(flowWithTrigger.getFlow().getId())
-                        .flowRevision(flowWithTrigger.getFlow().getRevision())
-                        .triggerId(flowWithTrigger.getTrigger().getId())
+                .map(flowWithTriggers -> FlowWithWorkerTrigger.builder()
+                    .flow(flowWithTriggers.getFlow())
+                    .abstractTrigger(flowWithTriggers.getAbstractTrigger())
+                    .workerTrigger((WorkerTriggerInterface) flowWithTriggers.getAbstractTrigger())
+                    .conditionContext(flowWithTriggers.getConditionContext())
+                    .triggerContext(flowWithTriggers.triggerContext
+                        .toBuilder()
                         .date(now())
+                        .stopAfter(flowWithTriggers.getAbstractTrigger().getStopAfter())
                         .build()
                     )
                     .build()
                 )
-                .filter(f -> this.isEvaluationInterval(f, now))
-                .filter(f -> !this.isTriggerRunning(f))
-                .filter(f -> this.isExecutionNotRunning(f, now))
-                .map(f -> {
-                    Trigger lastTrigger = this.getLastTrigger(f, now);
-
-                    return FlowWithPollingTriggerNextDate.of(
-                        f,
-                        f.getPollingTrigger().nextEvaluationDate(f.getConditionContext(), Optional.of(lastTrigger))
-                    );
+                .peek(f -> {
+                    if (f.getTriggerContext().getEvaluateRunningDate() != null || !isExecutionNotRunning(f)) {
+                        this.triggerState.unlock(f.getTriggerContext());
+                    }
                 })
+                .filter(f -> f.getTriggerContext().getEvaluateRunningDate() == null)
+                .filter(this::isExecutionNotRunning)
+                .map(FlowWithWorkerTriggerNextDate::of)
                 .filter(Objects::nonNull)
                 .toList();
 
@@ -272,67 +455,137 @@ public abstract class AbstractScheduler implements Scheduler {
                 .counter(MetricRegistry.SCHEDULER_EVALUATE_COUNT)
                 .increment(readyForEvaluate.size());
 
-
             // submit ready one to the worker
             readyForEvaluate
                 .forEach(f -> {
                     schedulableNextDate.put(f.getTriggerContext().uid(), f);
                     Logger logger = f.getConditionContext().getRunContext().logger();
-
-                    if (f.getPollingTrigger().getInterval() != null) {
-                        // If and interval the trigger is executed by the Worker.
-                        // Normally, only the Schedule trigger has no interval.
-                        var triggerRunning = Trigger.of(f.getTriggerContext(), now);
-                        triggerState.save(triggerRunning);
-
-                        try {
-                            this.sendPollingTriggerToWorker(f);
-                        } catch (InternalException e) {
-                            logger.error(
-                                "[namespace: {}] [flow: {}] [trigger: {}] Unable to send polling trigger to worker",
-                                f.getFlow().getNamespace(),
-                                f.getFlow().getId(),
-                                f.getTrigger().getId(),
-                                e
-                            );
+                    try {
+                        // conditionService.areValid can fail, so we cannot execute it early as we need to try/catch and send a failed executions
+                        List<Condition> conditions = f.getAbstractTrigger().getConditions() != null ? f.getAbstractTrigger().getConditions() : Collections.emptyList();
+                        boolean shouldEvaluate = conditionService.areValid(conditions, f.getConditionContext());
+                        if (shouldEvaluate) {
+                            if (this.interval(f.getAbstractTrigger()) != null) {
+                                // If it has an interval, the Worker will execute the trigger.
+                                // Normally, only the Schedule trigger has no interval.
+                                Trigger triggerRunning = Trigger.of(f.getTriggerContext(), now);
+                                var flowWithTrigger = f.toBuilder().triggerContext(triggerRunning).build();
+                                try {
+                                    this.triggerState.save(triggerRunning, scheduleContext);
+                                    this.sendWorkerTriggerToWorker(flowWithTrigger);
+                                } catch (InternalException e) {
+                                    logService.logTrigger(
+                                        f.getTriggerContext(),
+                                        logger,
+                                        Level.ERROR,
+                                        "Unable to send worker trigger to worker",
+                                        e
+                                    );
+                                }
+                            } else if (f.getWorkerTrigger() instanceof Schedule schedule) {
+                                // This is the Schedule, all other triggers should have an interval.
+                                // So we evaluate it now as there is no need to send it to the worker.
+                                // Schedule didn't use the triggerState to allow backfill.
+                                Optional<SchedulerExecutionWithTrigger> schedulerExecutionWithTrigger = evaluateScheduleTrigger(f);
+                                if (schedulerExecutionWithTrigger.isPresent()) {
+                                    this.handleEvaluateSchedulingTriggerResult(schedule, schedulerExecutionWithTrigger.get(), f.getConditionContext(), scheduleContext);
+                                } else {
+                                    // compute next date and save the trigger to avoid evaluating it each second
+                                    Trigger trigger = Trigger.fromEvaluateFailed(
+                                        f.getTriggerContext(),
+                                        schedule.nextEvaluationDate(f.getConditionContext(), Optional.of(f.getTriggerContext()))
+                                    );
+                                    trigger = trigger.checkBackfill();
+                                    this.triggerState.save(trigger, scheduleContext);
+                                }
+                            } else {
+                                logService.logTrigger(
+                                    f.getTriggerContext(),
+                                    logger,
+                                    Level.ERROR,
+                                    "Worker trigger must have an interval (except the Schedule and Streaming)"
+                                );
+                            }
+                        } else {
+                            ZonedDateTime nextExecutionDate = null;
+                            try {
+                                nextExecutionDate = this.nextEvaluationDate(f.getAbstractTrigger(), f.getConditionContext(), Optional.of(f.getTriggerContext()));
+                            } catch (Exception e) {
+                                logError(f, e);
+                            }
+                            var trigger = f.getTriggerContext().toBuilder().nextExecutionDate(nextExecutionDate).build().checkBackfill();
+                            this.triggerState.save(trigger, scheduleContext);
                         }
-                    } else if(f.getPollingTrigger() instanceof Schedule) {
-                        // This is the Schedule, all others trigger should have an interval.
-                        // So we evaluate it now as there is no need to send it to the worker.
-                        // Schedule didn't use the triggerState to allow backfill.
-                        try {
-                            var schedulerExecutionWithTrigger = evaluateScheduleTrigger(f);
-                            this.handleEvaluatePollingTriggerResult(schedulerExecutionWithTrigger);
-                        } catch (Exception e) {
-                            logger.error(
-                                "[namespace: {}] [flow: {}] [trigger: {}] Evaluate schedule trigger failed",
-                                f.getFlow().getNamespace(),
-                                f.getFlow().getId(),
-                                f.getTrigger().getId(),
-                                e
-                            );
-                        }
-                    } else {
-                        logger.error(
-                            "[namespace: {}] [flow: {}] [trigger: {}] Polling trigger must have an interval (except the Schedule)",
-                            f.getFlow().getNamespace(),
-                            f.getFlow().getId(),
-                            f.getTrigger().getId()
-                        );
+                    } catch (InternalException ie) {
+                        // validate schedule condition can fail to render variables
+                        // in this case, we send a failed execution so the trigger is not evaluated each second.
+                        logger.error("Unable to evaluate the trigger '{}'", f.getAbstractTrigger().getId(), ie);
+                        Execution execution = Execution.builder()
+                            .id(IdUtils.create())
+                            .tenantId(f.getTriggerContext().getTenantId())
+                            .namespace(f.getTriggerContext().getNamespace())
+                            .flowId(f.getTriggerContext().getFlowId())
+                            .labels(f.getFlow().getLabels())
+                            .state(new State().withState(State.Type.FAILED))
+                            .build();
+                        ZonedDateTime nextExecutionDate = this.nextEvaluationDate(f.getAbstractTrigger());
+                        var trigger = f.getTriggerContext().resetExecution(State.Type.FAILED, nextExecutionDate);
+                        this.saveLastTriggerAndEmitExecution(execution, trigger, triggerToSave -> this.triggerState.save(triggerToSave, scheduleContext));
                     }
                 });
-        }
+        });
     }
 
-    private void handleEvaluatePollingTriggerResult(SchedulerExecutionWithTrigger result) {
+    private void handleEvaluateWorkerTriggerResult(SchedulerExecutionWithTrigger result, ZonedDateTime nextExecutionDate) {
         Stream.of(result)
             .filter(Objects::nonNull)
             .peek(this::log)
-            .forEach(this::saveLastTriggerAndEmitExecution);
+            .forEach(executionWithTrigger -> {
+                    Trigger trigger = Trigger.of(
+                        executionWithTrigger.getTriggerContext(),
+                        executionWithTrigger.getExecution(),
+                        nextExecutionDate
+                    );
+
+                    // Worker triggers result is evaluated in another thread with the workerTriggerResultQueue.
+                    // We can then update the trigger directly.
+                    this.saveLastTriggerAndEmitExecution(executionWithTrigger.getExecution(), trigger, triggerToSave -> this.triggerState.update(triggerToSave));
+                }
+            );
     }
 
-    private boolean isExecutionNotRunning(FlowWithPollingTrigger f, ZonedDateTime now) {
-        Trigger lastTrigger = this.getLastTrigger(f, now);
+    private void handleEvaluateSchedulingTriggerResult(Schedule schedule, SchedulerExecutionWithTrigger result, ConditionContext conditionContext, ScheduleContextInterface scheduleContext) {
+        log(result);
+        Trigger trigger = Trigger.of(
+            result.getTriggerContext(),
+            result.getExecution(),
+            schedule.nextEvaluationDate(conditionContext, Optional.of(result.getTriggerContext()))
+        );
+        trigger = trigger.checkBackfill();
+
+        // if the execution is already failed due to failed execution, we reset the trigger now
+        if (result.getExecution().getState().getCurrent() == State.Type.FAILED) {
+            trigger = trigger.resetExecution(State.Type.FAILED);
+        }
+
+        // Schedule triggers are being executed directly from the handle method within the context where triggers are locked.
+        // So we must save them by passing the scheduleContext.
+        this.saveLastTriggerAndEmitExecution(result.getExecution(), trigger, triggerToSave -> this.triggerState.save(triggerToSave, scheduleContext));
+    }
+
+    protected void saveLastTriggerAndEmitExecution(Execution execution, Trigger trigger, Consumer<Trigger> saveAction) {
+        saveAction.accept(trigger);
+        this.emitExecution(execution, trigger);
+    }
+
+    protected void emitExecution(Execution execution, TriggerContext trigger) {
+        // we need to be sure that the tenantId is propagated from the trigger to the execution
+        var newExecution = execution.withTenantId(trigger.getTenantId());
+        this.executionQueue.emit(newExecution);
+    }
+
+    private boolean isExecutionNotRunning(FlowWithWorkerTrigger f) {
+        Trigger lastTrigger = f.getTriggerContext();
 
         if (lastTrigger.getExecutionId() == null) {
             return true;
@@ -347,11 +600,11 @@ public abstract class AbstractScheduler implements Scheduler {
             }
 
             if (lastTrigger.getUpdatedDate() == null || lastTrigger.getUpdatedDate().plusSeconds(60).isBefore(Instant.now())) {
-                log.warn(
-                    "[namespace: {}] [flow: {}] [trigger: {}] Execution '{}' is not found, schedule is blocked since '{}'",
-                    lastTrigger.getNamespace(),
-                    lastTrigger.getFlowId(),
-                    lastTrigger.getTriggerId(),
+                logService.logTrigger(
+                    f.getTriggerContext(),
+                    log,
+                    Level.WARN,
+                    "Execution '{}' is not found, schedule is blocked since '{}'",
                     lastTrigger.getExecutionId(),
                     lastTrigger.getUpdatedDate()
                 );
@@ -367,11 +620,11 @@ public abstract class AbstractScheduler implements Scheduler {
         }
 
         if (log.isDebugEnabled()) {
-            log.debug(
-                "[namespace: {}] [flow: {}] [trigger: {}] Execution '{}' is still '{}', updated at '{}'",
-                lastTrigger.getNamespace(),
-                lastTrigger.getFlowId(),
-                lastTrigger.getTriggerId(),
+            logService.logTrigger(
+                f.getTriggerContext(),
+                log,
+                Level.DEBUG,
+                "Execution '{}' is still '{}', updated at '{}'",
                 lastTrigger.getExecutionId(),
                 lastTrigger.getExecutionCurrentState(),
                 lastTrigger.getUpdatedDate()
@@ -407,157 +660,73 @@ public abstract class AbstractScheduler implements Scheduler {
             }
         }
 
-        log.info(
-            "[namespace: {}] [flow: {}] [trigger: {}] Scheduled execution {} at '{}' started at '{}'",
-            executionWithTrigger.getExecution().getNamespace(),
-            executionWithTrigger.getExecution().getFlowId(),
-            executionWithTrigger.getTriggerContext().getTriggerId(),
+        logService.logTrigger(
+            executionWithTrigger.getTriggerContext(),
+            log,
+            Level.INFO,
+            "Scheduled execution {} at '{}' started at '{}'",
             executionWithTrigger.getExecution().getId(),
             executionWithTrigger.getTriggerContext().getDate(),
             now
         );
     }
 
-    private Trigger getLastTrigger(FlowWithPollingTrigger f, ZonedDateTime now) {
-        return triggerState
-            .findLast(f.getTriggerContext())
-            .orElseGet(() -> {
-                ZonedDateTime nextDate = f.getPollingTrigger().nextEvaluationDate(f.getConditionContext(), Optional.empty());
-
-                Trigger build = Trigger.builder()
-                    .date(nextDate.compareTo(now) < 0 ? nextDate : now)
-                    .flowId(f.getFlow().getId())
-                    .flowRevision(f.getFlow().getRevision())
-                    .namespace(f.getFlow().getNamespace())
-                    .triggerId(f.getTriggerContext().getTriggerId())
-                    .updatedDate(Instant.now())
-                    .build();
-
-                // We don't find a trigger, so the flow was never started.
-                // We create a trigger context with previous date in the past.
-                // This fix an edge case when the evaluation loop of the scheduler didn't catch up so new triggers was detected but not stored.
-                synchronized (triggerStateSavedLock) {
-                    if (triggerStateSaved.containsKey(build.uid())) {
-                        Trigger cachedTrigger = triggerStateSaved.get(build.uid());
-
-                        triggerState.save(build);
-                        triggerStateSaved.remove(build.uid());
-
-                        return cachedTrigger;
-                    } else {
-                        triggerStateSaved.put(build.uid(), build);
-                    }
-                }
-
-                return build;
-            });
-    }
-
-    private boolean isEvaluationInterval(FlowWithPollingTrigger flowWithPollingTrigger, ZonedDateTime now) {
-        if (flowWithPollingTrigger.getPollingTrigger().getInterval() == null) {
-            return true;
-        }
-
-        String key = flowWithPollingTrigger.getTriggerContext().uid();
-
-        if (!this.lastEvaluate.containsKey(key)) {
-            this.lastEvaluate.put(key, now);
-            return true;
-        }
-
-        boolean result = this.lastEvaluate.get(key)
-            .plus(flowWithPollingTrigger.getPollingTrigger().getInterval())
-            .compareTo(now) < 0;
-
-        if (result) {
-            this.lastEvaluate.put(key, now);
-        }
-
-        return result;
-    }
-
-    private boolean isTriggerRunning(FlowWithPollingTrigger flowWithPollingTrigger) {
-        // We don't want to check if a trigger is running for Schedule trigger which didn't use the triggerState store
-        if (flowWithPollingTrigger.getPollingTrigger().getInterval() == null) {
-            return false;
-        }
-
-        var runningTrigger = this.triggerState
-            .findLast(flowWithPollingTrigger.getTriggerContext())
-            .filter(trigger -> trigger.getEvaluateRunningDate() != null);
-        return runningTrigger.isPresent();
-    }
-
-    protected void saveLastTriggerAndEmitExecution(SchedulerExecutionWithTrigger executionWithTrigger) {
-        Trigger trigger = Trigger.of(
-            executionWithTrigger.getTriggerContext(),
-            executionWithTrigger.getExecution()
-        );
-
-        synchronized (triggerStateSavedLock) {
-            this.triggerState.save(trigger);
-            // we need to be sure that the tenantId is propagated from the trigger to the execution
-            var execution = executionWithTrigger.getExecution().withTenantId(executionWithTrigger.getTriggerContext().getTenantId());
-            this.executionQueue.emit(execution);
-        }
-    }
-
     private static ZonedDateTime now() {
         return ZonedDateTime.now().truncatedTo(ChronoUnit.SECONDS);
     }
 
-    private SchedulerExecutionWithTrigger evaluateScheduleTrigger(FlowWithPollingTrigger flowWithTrigger) {
+    private Optional<SchedulerExecutionWithTrigger> evaluateScheduleTrigger(FlowWithWorkerTrigger flowWithTrigger) {
         try {
-            FlowWithPollingTrigger flowWithPollingTrigger = flowWithTrigger.from(taskDefaultService.injectDefaults(
+            FlowWithWorkerTrigger flowWithWorkerTrigger = flowWithTrigger.from(pluginDefaultService.injectDefaults(
                 flowWithTrigger.getFlow(),
                 flowWithTrigger.getConditionContext().getRunContext().logger()
             ));
 
-            // @TODO: mutability dirty that force creation of a new triggerExecutionId
-            flowWithPollingTrigger.getConditionContext().getRunContext().forScheduler(
-                flowWithPollingTrigger.getTriggerContext(),
-                flowWithTrigger.getTrigger()
+            // mutability dirty hack that forces the creation of a new triggerExecutionId
+            DefaultRunContext runContext = (DefaultRunContext) flowWithWorkerTrigger.getConditionContext().getRunContext();
+            runContextInitializer.forScheduler(
+                runContext,
+                flowWithWorkerTrigger.getTriggerContext(),
+                flowWithWorkerTrigger.getAbstractTrigger()
             );
 
-            Optional<Execution> evaluate = flowWithPollingTrigger.getPollingTrigger().evaluate(
-                flowWithPollingTrigger.getConditionContext(),
-                flowWithPollingTrigger.getTriggerContext()
+            Optional<Execution> evaluate = ((Schedule) flowWithWorkerTrigger.getWorkerTrigger()).evaluate(
+                flowWithWorkerTrigger.getConditionContext(),
+                flowWithWorkerTrigger.getTriggerContext()
             );
 
             if (log.isDebugEnabled()) {
-                if (log.isDebugEnabled()) {
-                    log.debug(
-                        "[namespace: {}] [flow: {}] [trigger: {}] [type: {}] {}",
-                        flowWithPollingTrigger.getFlow().getNamespace(),
-                        flowWithPollingTrigger.getFlow().getId(),
-                        flowWithPollingTrigger.getTrigger().getId(),
-                        flowWithPollingTrigger.getTrigger().getType(),
-                        evaluate.map(execution -> "New execution '" + execution.getId() + "'").orElse("Empty evaluation")
-                    );
-                }
+                logService.logTrigger(
+                    flowWithWorkerTrigger.getTriggerContext(),
+                    log,
+                    Level.DEBUG,
+                    "[type: {}] {}",
+                    flowWithWorkerTrigger.getAbstractTrigger().getType(),
+                    evaluate.map(execution -> "New execution '" + execution.getId() + "'").orElse("Empty evaluation")
+                );
             }
 
-            flowWithPollingTrigger.getConditionContext().getRunContext().cleanup();
+            flowWithWorkerTrigger.getConditionContext().getRunContext().cleanup();
 
             return evaluate.map(execution -> new SchedulerExecutionWithTrigger(
                 execution,
                 flowWithTrigger.getTriggerContext()
-            )).orElse(null);
+            ));
         } catch (Exception e) {
             logError(flowWithTrigger, e);
-            return null;
+            return Optional.empty();
         }
     }
 
-    private void logError(FlowWithPollingTrigger flowWithPollingTriggerNextDate, Throwable e) {
-        Logger logger = flowWithPollingTriggerNextDate.getConditionContext().getRunContext().logger();
+    private void logError(FlowWithWorkerTrigger flowWithWorkerTriggerNextDate, Throwable e) {
+        Logger logger = flowWithWorkerTriggerNextDate.getConditionContext().getRunContext().logger();
 
-        logger.warn(
-            "[namespace: {}] [flow: {}] [trigger: {}] [date: {}] Evaluate Failed with error '{}'",
-            flowWithPollingTriggerNextDate.getFlow().getNamespace(),
-            flowWithPollingTriggerNextDate.getFlow().getId(),
-            flowWithPollingTriggerNextDate.getTriggerContext().getTriggerId(),
-            flowWithPollingTriggerNextDate.getTriggerContext().getDate(),
+        logService.logTrigger(
+            flowWithWorkerTriggerNextDate.getTriggerContext(),
+            logger,
+            Level.WARN,
+            "[date: {}] Evaluate Failed with error '{}'",
+            flowWithWorkerTriggerNextDate.getTriggerContext().getDate(),
             e.getMessage(),
             e
         );
@@ -567,58 +736,100 @@ public abstract class AbstractScheduler implements Scheduler {
         }
     }
 
-    private void sendPollingTriggerToWorker(FlowWithPollingTrigger flowWithTrigger) throws InternalException {
-        FlowWithPollingTrigger flowWithTriggerWithDefault = flowWithTrigger.from(
-            taskDefaultService.injectDefaults(flowWithTrigger.getFlow(),
+    private void logError(ConditionContext conditionContext, Flow flow, AbstractTrigger trigger, Throwable e) {
+        Logger logger = conditionContext.getRunContext().logger();
+
+        logService.logFlow(
+            flow,
+            logger,
+            Level.ERROR,
+            "[trigger: {}] [date: {}] Evaluate Failed with error '{}'",
+            trigger.getId(),
+            now(),
+            e.getMessage(),
+            e
+        );
+    }
+
+    private void sendWorkerTriggerToWorker(FlowWithWorkerTrigger flowWithTrigger) throws InternalException {
+        FlowWithWorkerTrigger flowWithTriggerWithDefault = flowWithTrigger.from(
+            pluginDefaultService.injectDefaults(flowWithTrigger.getFlow(),
                 flowWithTrigger.getConditionContext().getRunContext().logger())
         );
 
         if (log.isDebugEnabled()) {
-            log.debug(
-                "[namespace: {}] [flow: {}] [trigger: {}] [date: {}] Scheduling evaluation to the worker",
-                flowWithTrigger.getFlow().getNamespace(),
-                flowWithTrigger.getFlow().getId(),
-                flowWithTrigger.getTriggerContext().getDate(),
-                flowWithTrigger.getTriggerContext().getTriggerId()
+            logService.logTrigger(
+                flowWithTrigger.getTriggerContext(),
+                log,
+                Level.DEBUG,
+                "[date: {}] Scheduling evaluation to the worker",
+                flowWithTrigger.getTriggerContext().getDate()
             );
         }
 
         var workerTrigger = WorkerTrigger
             .builder()
-            .trigger(flowWithTriggerWithDefault.trigger)
+            .trigger(flowWithTriggerWithDefault.abstractTrigger)
             .triggerContext(flowWithTriggerWithDefault.triggerContext)
             .conditionContext(flowWithTriggerWithDefault.conditionContext)
             .build();
         this.workerTaskQueue.emit(workerGroupService.resolveGroupFromJob(workerTrigger), workerTrigger);
     }
 
+    /**
+     * {@inheritDoc}
+     **/
     @Override
     @PreDestroy
     public void close() {
-        this.scheduleExecutor.shutdown();
+        close(null);
+    }
+
+    protected void close(final @Nullable Runnable onClose) {
+        if (shutdown.compareAndSet(false, true)) {
+            if (log.isDebugEnabled()) {
+                log.debug("Terminating");
+            }
+
+            setState(ServiceState.TERMINATING);
+            try {
+                if (onClose != null) {
+                    onClose.run();
+                }
+            } catch (Exception e) {
+                log.error("Unexpected error while terminating scheduler.", e);
+            }
+            this.receiveCancellations.forEach(Runnable::run);
+            this.scheduleExecutor.shutdown();
+            setState(ServiceState.TERMINATED_GRACEFULLY);
+
+            if (log.isDebugEnabled()) {
+                log.debug("Closed ({}).", state.get().name());
+            }
+        }
     }
 
     @SuperBuilder(toBuilder = true)
     @Getter
     @NoArgsConstructor
-    private static class FlowWithPollingTrigger {
+    private static class FlowWithWorkerTrigger {
         private Flow flow;
-        private AbstractTrigger trigger;
-        private PollingTriggerInterface pollingTrigger;
-        private TriggerContext triggerContext;
+        private AbstractTrigger abstractTrigger;
+        private WorkerTriggerInterface workerTrigger;
+        private Trigger triggerContext;
         private ConditionContext conditionContext;
 
-        public FlowWithPollingTrigger from(Flow flow) throws InternalException {
+        public FlowWithWorkerTrigger from(Flow flow) throws InternalException {
             AbstractTrigger abstractTrigger = flow.getTriggers()
                 .stream()
-                .filter(a -> a.getId().equals(this.trigger.getId()) && a instanceof PollingTriggerInterface)
+                .filter(a -> a.getId().equals(this.abstractTrigger.getId()) && a instanceof WorkerTriggerInterface)
                 .findFirst()
-                .orElseThrow(() -> new InternalException("Couldn't find the trigger '" + this.trigger.getId() + "' on flow '" + flow.uid() + "'"));
+                .orElseThrow(() -> new InternalException("Couldn't find the trigger '" + this.abstractTrigger.getId() + "' on flow '" + flow.uid() + "'"));
 
             return this.toBuilder()
                 .flow(flow)
-                .trigger(abstractTrigger)
-                .pollingTrigger((PollingTriggerInterface) abstractTrigger)
+                .abstractTrigger(abstractTrigger)
+                .workerTrigger((WorkerTriggerInterface) abstractTrigger)
                 .build();
         }
     }
@@ -626,35 +837,72 @@ public abstract class AbstractScheduler implements Scheduler {
     @SuperBuilder
     @Getter
     @NoArgsConstructor
-    public static class FlowWithPollingTriggerNextDate extends FlowWithPollingTrigger {
+    public static class FlowWithWorkerTriggerNextDate extends FlowWithWorkerTrigger {
         private ZonedDateTime next;
 
-        public static FlowWithPollingTriggerNextDate of(FlowWithPollingTrigger f, ZonedDateTime next) {
-            return FlowWithPollingTriggerNextDate.builder()
+        private static FlowWithWorkerTriggerNextDate of(FlowWithWorkerTrigger f) {
+            return FlowWithWorkerTriggerNextDate.builder()
                 .flow(f.getFlow())
-                .trigger(f.getTrigger())
-                .pollingTrigger(f.getPollingTrigger())
+                .abstractTrigger(f.getAbstractTrigger())
+                .workerTrigger(f.getWorkerTrigger())
                 .conditionContext(f.getConditionContext())
-                .triggerContext(TriggerContext.builder()
+                .triggerContext(Trigger.builder()
                     .tenantId(f.getTriggerContext().getTenantId())
                     .namespace(f.getTriggerContext().getNamespace())
                     .flowId(f.getTriggerContext().getFlowId())
-                    .flowRevision(f.getTriggerContext().getFlowRevision())
                     .triggerId(f.getTriggerContext().getTriggerId())
-                    .date(next)
+                    .date(f.getTriggerContext().getNextExecutionDate())
+                    .nextExecutionDate(f.getTriggerContext().getNextExecutionDate())
+                    .backfill(f.getTriggerContext().getBackfill())
+                    .stopAfter(f.getTriggerContext().getStopAfter())
                     .build()
                 )
-                .next(next)
+                .next(f.getTriggerContext().getNextExecutionDate())
                 .build();
         }
     }
 
     @AllArgsConstructor
     @Getter
-    public static class FlowWithTrigger {
+    @Builder(toBuilder = true)
+    public static class FlowWithTriggers {
         private final Flow flow;
-        private final AbstractTrigger trigger;
+        private final AbstractTrigger abstractTrigger;
+        private final Trigger triggerContext;
         private final RunContext runContext;
         private final ConditionContext conditionContext;
+
+        public String uid() {
+            return Trigger.uid(flow, abstractTrigger);
+        }
+    }
+
+    protected void setState(final ServiceState state) {
+        this.state.set(state);
+        eventPublisher.publishEvent(new ServiceStateChangeEvent(this));
+    }
+
+    /**
+     * {@inheritDoc}
+     **/
+    @Override
+    public String getId() {
+        return id;
+    }
+
+    /**
+     * {@inheritDoc}
+     **/
+    @Override
+    public ServiceType getType() {
+        return ServiceType.SCHEDULER;
+    }
+
+    /**
+     * {@inheritDoc}
+     **/
+    @Override
+    public ServiceState getState() {
+        return state.get();
     }
 }
