@@ -1,9 +1,11 @@
 package io.kestra.core.docs;
 
 import io.kestra.core.Helpers;
+import io.kestra.core.models.tasks.runners.TaskRunner;
+import io.kestra.plugin.core.runner.Process;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.models.triggers.AbstractTrigger;
-import io.kestra.core.models.triggers.types.Schedule;
+import io.kestra.plugin.core.trigger.Schedule;
 import io.kestra.core.plugins.PluginScanner;
 import io.kestra.core.plugins.RegisteredPlugin;
 import org.junit.jupiter.api.Test;
@@ -32,9 +34,9 @@ class ClassPluginDocumentationTest {
             List<RegisteredPlugin> scan = pluginScanner.scan(plugins);
 
             assertThat(scan.size(), is(1));
-            assertThat(scan.get(0).getTasks().size(), is(1));
+            assertThat(scan.getFirst().getTasks().size(), is(1));
 
-            ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.get(0), scan.get(0).getTasks().get(0), Task.class);
+            ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.getFirst(), scan.getFirst().getTasks().getFirst(), Task.class);
 
             assertThat(doc.getDocExamples().size(), is(2));
             assertThat(doc.getIcon(), is(notNullValue()));
@@ -97,10 +99,27 @@ class ClassPluginDocumentationTest {
 
             ClassPluginDocumentation<? extends AbstractTrigger> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, Schedule.class, null);
 
-            assertThat(doc.getDefs().size(), is(4));
+            assertThat(doc.getDefs().size(), is(2));
 
-            assertThat(((Map<String, Object>) doc.getDefs().get("io.kestra.core.models.conditions.ScheduleCondition")).get("type"), is("object"));
-            assertThat(((Map<String, Object>) ((Map<String, Object>) doc.getDefs().get("io.kestra.core.models.conditions.ScheduleCondition")).get("properties")).size(), is(0));
+            assertThat(((Map<String, Object>) doc.getDefs().get("io.kestra.core.models.tasks.WorkerGroup")).get("type"), is("object"));
+            assertThat(((Map<String, Object>) ((Map<String, Object>) doc.getDefs().get("io.kestra.core.models.tasks.WorkerGroup")).get("properties")).size(), is(1));
+        }));
+    }
+
+    @Test
+    void taskRunner() throws URISyntaxException {
+        Helpers.runApplicationContext(throwConsumer((applicationContext) -> {
+            JsonSchemaGenerator jsonSchemaGenerator = applicationContext.getBean(JsonSchemaGenerator.class);
+
+            PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
+            RegisteredPlugin scan = pluginScanner.scan();
+
+            ClassPluginDocumentation<? extends TaskRunner> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, Process.class, null);
+
+            assertThat((Map<?, ?>) doc.getPropertiesSchema().get("properties"), anEmptyMap());
+            assertThat(doc.getCls(), is("io.kestra.plugin.core.runner.Process"));
+            assertThat(doc.getPropertiesSchema().get("title"), is("Task runner that executes a task as a subprocess on the Kestra host."));
+            assertThat(doc.getDefs(), anEmptyMap());
         }));
     }
 }
