@@ -1,14 +1,16 @@
 package io.kestra.core.docs;
 
+import io.kestra.core.models.tasks.runners.TaskRunner;
+import io.kestra.plugin.core.runner.Process;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.plugins.PluginScanner;
 import io.kestra.core.plugins.RegisteredPlugin;
-import io.kestra.core.tasks.debugs.Echo;
-import io.kestra.core.tasks.debugs.Return;
-import io.kestra.core.tasks.flows.Dag;
-import io.kestra.core.tasks.flows.Flow;
-import io.kestra.core.tasks.states.Set;
-import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
+import io.kestra.plugin.core.debug.Echo;
+import io.kestra.plugin.core.debug.Return;
+import io.kestra.plugin.core.flow.Dag;
+import io.kestra.plugin.core.flow.Subflow;
+import io.kestra.plugin.core.state.Set;
+import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 
@@ -23,7 +25,7 @@ import java.util.Objects;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 
-@MicronautTest
+@KestraTest
 class DocumentationGeneratorTest {
     @Inject
     JsonSchemaGenerator jsonSchemaGenerator;
@@ -39,7 +41,7 @@ class DocumentationGeneratorTest {
         List<RegisteredPlugin> scan = pluginScanner.scan(plugins);
 
         assertThat(scan.size(), is(1));
-        ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.get(0), scan.get(0).getTasks().get(0), Task.class);
+        ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.getFirst(), scan.getFirst().getTasks().getFirst(), Task.class);
 
         String render = DocumentationGenerator.render(doc);
 
@@ -96,7 +98,7 @@ class DocumentationGeneratorTest {
 
         String render = DocumentationGenerator.render(doc);
 
-        assertThat(render, containsString("Debugging task that return"));
+        assertThat(render, containsString("Return a value for debugging purposes."));
         assertThat(render, containsString("is mostly useful"));
         assertThat(render, containsString("## Metrics"));
         assertThat(render, containsString("### `length`\n" + "* **Type:** ==counter== "));
@@ -108,7 +110,7 @@ class DocumentationGeneratorTest {
     void defaultBool() throws IOException {
         PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
         RegisteredPlugin scan = pluginScanner.scan();
-        Class bash = scan.findClass(Flow.class.getName()).orElseThrow();
+        Class bash = scan.findClass(Subflow.class.getName()).orElseThrow();
 
         ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, bash, Task.class);
 
@@ -129,9 +131,10 @@ class DocumentationGeneratorTest {
         String render = DocumentationGenerator.render(doc);
 
         assertThat(render, containsString("Echo"));
-        assertThat(render, containsString("- \uD83D\uDD12 Deprecated"));
+        assertThat(render, containsString("Deprecated"));
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     void state() throws IOException {
         PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
@@ -152,8 +155,23 @@ class DocumentationGeneratorTest {
         RegisteredPlugin core = pluginScanner.scan();
 
         List<Document> docs = documentationGenerator.generate(core);
-        Document doc = docs.get(0);
+        Document doc = docs.getFirst();
         assertThat(doc.getIcon(), is(notNullValue()));
-        assertThat(doc.getBody(), containsString("##  <img width=\"25\" src=\"data:image/svg+xml;base64,"));
+        assertThat(doc.getBody(), containsString("## <img width=\"25\" src=\"data:image/svg+xml;base64,"));
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    void taskRunner() throws IOException {
+        PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
+        RegisteredPlugin scan = pluginScanner.scan();
+        Class<Process> processTaskRunner = scan.findClass(Process.class.getName()).orElseThrow();
+
+        ClassPluginDocumentation<? extends TaskRunner> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, processTaskRunner, TaskRunner.class);
+
+        String render = DocumentationGenerator.render(doc);
+
+        assertThat(render, containsString("title: Process"));
+        assertThat(render, containsString("Task runner that executes a task as a subprocess on the Kestra host."));
     }
 }
