@@ -8,28 +8,29 @@ import io.kestra.core.events.CrudEventType;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.FlowWithException;
 import io.kestra.core.models.flows.FlowWithSource;
-import io.kestra.core.models.flows.Input;
+import io.kestra.core.models.flows.Type;
 import io.kestra.core.models.flows.input.StringInput;
 import io.kestra.core.models.triggers.Trigger;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
-import io.kestra.core.runners.FlowListeners;
 import io.kestra.core.schedulers.AbstractSchedulerTest;
 import io.kestra.core.serializers.JacksonMapper;
-import io.kestra.core.services.TaskDefaultService;
-import io.kestra.core.tasks.debugs.Return;
-import io.kestra.core.tasks.flows.Template;
-import io.kestra.core.tasks.log.Log;
+import io.kestra.core.services.FlowService;
+import io.kestra.core.services.PluginDefaultService;
+import io.kestra.plugin.core.debug.Return;
+import io.kestra.plugin.core.flow.Template;
+import io.kestra.plugin.core.log.Log;
 import io.kestra.core.utils.Await;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
 import io.micronaut.context.event.ApplicationEventListener;
 import io.micronaut.data.model.Pageable;
 import io.micronaut.data.model.Sort;
-import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
+import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
+import lombok.Getter;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
@@ -37,13 +38,9 @@ import org.junit.jupiter.api.TestInstance;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.TimeoutException;
-import javax.validation.ConstraintViolationException;
+import jakarta.validation.ConstraintViolationException;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -51,7 +48,8 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.spy;
 
-@MicronautTest(transactional = false)
+// If some counts are wrong in this test it means that one of the tests is not properly deleting what it created
+@KestraTest
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public abstract class AbstractFlowRepositoryTest {
     @Inject
@@ -61,7 +59,7 @@ public abstract class AbstractFlowRepositoryTest {
     private LocalFlowRepositoryLoader repositoryLoader;
 
     @Inject
-    protected TaskDefaultService taskDefaultService;
+    protected PluginDefaultService pluginDefaultService;
 
     @Inject
     @Named(QueueFactoryInterface.TRIGGER_NAMED)
@@ -89,14 +87,35 @@ public abstract class AbstractFlowRepositoryTest {
         Flow flow = builder()
             .revision(3)
             .build();
-        flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
+        flow = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
+        try {
+            Optional<Flow> full = flowRepository.findById(null, flow.getNamespace(), flow.getId());
+            assertThat(full.isPresent(), is(true));
+            assertThat(full.get().getRevision(), is(1));
 
-        Optional<Flow> full = flowRepository.findById(null, flow.getNamespace(), flow.getId());
-        assertThat(full.isPresent(), is(true));
-        assertThat(full.get().getRevision(), is(1));
+            full = flowRepository.findById(null, flow.getNamespace(), flow.getId(), Optional.empty());
+            assertThat(full.isPresent(), is(true));
+        } finally {
+            deleteFlow(flow);
+        }
+    }
 
-        full = flowRepository.findById(null, flow.getNamespace(), flow.getId(), Optional.empty());
-        assertThat(full.isPresent(), is(true));
+    @Test
+    void findByIdWithoutAcl() {
+        Flow flow = builder()
+            .revision(3)
+            .build();
+        flow = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
+        try {
+            Optional<Flow> full = flowRepository.findByIdWithoutAcl(null, flow.getNamespace(), flow.getId(), Optional.empty());
+            assertThat(full.isPresent(), is(true));
+            assertThat(full.get().getRevision(), is(1));
+
+            full = flowRepository.findByIdWithoutAcl(null, flow.getNamespace(), flow.getId(), Optional.empty());
+            assertThat(full.isPresent(), is(true));
+        } finally {
+            deleteFlow(flow);
+        }
     }
 
     @Test
@@ -104,16 +123,20 @@ public abstract class AbstractFlowRepositoryTest {
         Flow flow = builder()
             .revision(3)
             .build();
-        flowRepository.create(flow, "# comment\n" + flow.generateSource(), taskDefaultService.injectDefaults(flow));
+        flow = flowRepository.create(flow, "# comment\n" + flow.generateSource(), pluginDefaultService.injectDefaults(flow));
 
-        Optional<FlowWithSource> full = flowRepository.findByIdWithSource(null, flow.getNamespace(), flow.getId());
-        assertThat(full.isPresent(), is(true));
+        try {
+            Optional<FlowWithSource> full = flowRepository.findByIdWithSource(null, flow.getNamespace(), flow.getId());
+            assertThat(full.isPresent(), is(true));
 
-        full.ifPresent(current -> {
-            assertThat(full.get().getRevision(), is(1));
-            assertThat(full.get().getSource(), containsString("# comment"));
-            assertThat(full.get().getSource(), not(containsString("revision:")));
-        });
+            full.ifPresent(current -> {
+                assertThat(full.get().getRevision(), is(1));
+                assertThat(full.get().getSource(), containsString("# comment"));
+                assertThat(full.get().getSource(), not(containsString("revision:")));
+            });
+        } finally {
+            deleteFlow(flow);
+        }
     }
 
     @Test
@@ -124,61 +147,64 @@ public abstract class AbstractFlowRepositoryTest {
             .id(flowId)
             .namespace("io.kestra.unittest")
             .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
-            .inputs(ImmutableList.of(StringInput.builder().type(Input.Type.STRING).name("a").build()))
+            .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("a").build()))
             .build();
         // create with repository
-        FlowWithSource flow = flowRepository.create(first, first.generateSource(), taskDefaultService.injectDefaults(first));
+        FlowWithSource flow = flowRepository.create(first, first.generateSource(), pluginDefaultService.injectDefaults(first));
 
-        // submit new one, no change
-        Flow notSaved = flowRepository.update(flow, flow, first.generateSource(), taskDefaultService.injectDefaults(flow));
-        assertThat(notSaved.getRevision(), is(flow.getRevision()));
+        List<FlowWithSource> revisions;
+        try {
+            // submit new one, no change
+            Flow notSaved = flowRepository.update(flow, flow, first.generateSource(), pluginDefaultService.injectDefaults(flow));
+            assertThat(notSaved.getRevision(), is(flow.getRevision()));
 
-        // submit new one with change
-        Flow flowRev2 = Flow.builder()
-            .id(flowId)
-            .namespace("io.kestra.unittest")
-            .tasks(Collections.singletonList(
-                Log.builder()
-                    .id(IdUtils.create())
-                    .type(Log.class.getName())
-                    .message("Hello World")
-                    .build()
-            ))
-            .inputs(ImmutableList.of(StringInput.builder().type(Input.Type.STRING).name("b").build()))
-            .build();
+            // submit new one with change
+            Flow flowRev2 = Flow.builder()
+                .id(flowId)
+                .namespace("io.kestra.unittest")
+                .tasks(Collections.singletonList(
+                    Log.builder()
+                        .id(IdUtils.create())
+                        .type(Log.class.getName())
+                        .message("Hello World")
+                        .build()
+                ))
+                .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("b").build()))
+                .build();
 
-        // revision is incremented
-        FlowWithSource incremented = flowRepository.update(flowRev2, flow, flowRev2.generateSource(), taskDefaultService.injectDefaults(flowRev2));
-        assertThat(incremented.getRevision(), is(2));
+            // revision is incremented
+            FlowWithSource incremented = flowRepository.update(flowRev2, flow, flowRev2.generateSource(), pluginDefaultService.injectDefaults(flowRev2));
+            assertThat(incremented.getRevision(), is(2));
 
-        // revision is well saved
-        List<FlowWithSource> revisions = flowRepository.findRevisions(null, flow.getNamespace(), flow.getId());
-        assertThat(revisions.size(), is(2));
+            // revision is well saved
+            revisions = flowRepository.findRevisions(null, flow.getNamespace(), flow.getId());
+            assertThat(revisions.size(), is(2));
 
-        // submit the same one serialized, no changed
-        FlowWithSource incremented2 = flowRepository.update(
-            JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flowRev2), Flow.class),
-            flowRev2,
-            JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flowRev2), Flow.class).generateSource(),
-            taskDefaultService.injectDefaults(flowRev2)
-        );
-        assertThat(incremented2.getRevision(), is(2));
+            // submit the same one serialized, no changed
+            FlowWithSource incremented2 = flowRepository.update(
+                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flowRev2), Flow.class),
+                flowRev2,
+                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flowRev2), Flow.class).generateSource(),
+                pluginDefaultService.injectDefaults(flowRev2)
+            );
+            assertThat(incremented2.getRevision(), is(2));
 
-        // resubmit first one, revision is incremented
-        FlowWithSource incremented3 = flowRepository.update(
-            JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class),
-            flowRev2,
-            JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class).generateSource(),
-            taskDefaultService.injectDefaults(JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class))
-        );
-        assertThat(incremented3.getRevision(), is(3));
-
-        // delete
-        flowRepository.delete(incremented3);
+            // resubmit first one, revision is incremented
+            FlowWithSource incremented3 = flowRepository.update(
+                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class),
+                flowRev2,
+                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class).generateSource(),
+                pluginDefaultService.injectDefaults(JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class))
+            );
+            assertThat(incremented3.getRevision(), is(3));
+        } finally {
+            deleteFlow(flow);
+        }
 
         // revisions is still findable after delete
         revisions = flowRepository.findRevisions(null, flow.getNamespace(), flow.getId());
         assertThat(revisions.size(), is(4));
+
 
         Optional<Flow> findDeleted = flowRepository.findById(
             null,
@@ -190,27 +216,38 @@ public abstract class AbstractFlowRepositoryTest {
         assertThat(findDeleted.get().getRevision(), is(flow.getRevision()));
 
         // recreate the first one, we have a new revision
-        Flow incremented4 = flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
+        Flow incremented4 = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
 
-        assertThat(incremented4.getRevision(), is(5));
+        try {
+            assertThat(incremented4.getRevision(), is(5));
+        } finally {
+            deleteFlow(incremented4);
+        }
     }
 
     @Test
     void save() {
         Flow flow = builder().revision(12).build();
-        Flow save = flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
+        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
 
-        assertThat(save.getRevision(), is(1));
+        try {
+            assertThat(save.getRevision(), is(1));
+        } finally {
+            deleteFlow(save);
+        }
     }
 
     @Test
     void saveNoRevision() {
         Flow flow = builder().build();
-        Flow save = flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
+        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
 
-        assertThat(save.getRevision(), is(1));
+        try {
+            assertThat(save.getRevision(), is(1));
+        } finally {
+            deleteFlow(save);
+        }
 
-        flowRepository.delete(save);
     }
 
     @Test
@@ -230,7 +267,7 @@ public abstract class AbstractFlowRepositoryTest {
     @Test
     void findByNamespace() {
         List<Flow> save = flowRepository.findByNamespace(null, "io.kestra.tests");
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 3));
+        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 15));
 
         save = flowRepository.findByNamespace(null, "io.kestra.tests2");
         assertThat((long) save.size(), is(1L));
@@ -240,17 +277,53 @@ public abstract class AbstractFlowRepositoryTest {
     }
 
     @Test
+    void findByNamespacePrefix() {
+        List<Flow> save = flowRepository.findByNamespacePrefix(null, "io.kestra.tests");
+        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 1));
+
+        save = flowRepository.findByNamespace(null, "io.kestra.tests2");
+        assertThat((long) save.size(), is(1L));
+
+        save = flowRepository.findByNamespace(null, "io.kestra.tests.minimal.bis");
+        assertThat((long) save.size(), is(1L));
+    }
+
+    @Test
+    void findByNamespaceWithSource() {
+        Flow flow = builder()
+            .revision(3)
+            .build();
+        String flowSource = "# comment\n" + flow.generateSource();
+        flow = flowRepository.create(flow, flowSource, pluginDefaultService.injectDefaults(flow));
+
+        try {
+            List<FlowWithSource> save = flowRepository.findByNamespaceWithSource(null, flow.getNamespace());
+            assertThat((long) save.size(), is(1L));
+
+            assertThat(save.getFirst().getSource(), is(FlowService.cleanupSource(flowSource)));
+        } finally {
+            deleteFlow(flow);
+        }
+    }
+
+    @Test
     void find() {
-        List<Flow> save = flowRepository.find(Pageable.from(1, 10),null, null, "io.kestra.tests", Collections.emptyMap());
-        assertThat((long) save.size(), is(10L));
+        List<Flow> save = flowRepository.find(Pageable.from(1, (int) Helpers.FLOWS_COUNT - 1, Sort.UNSORTED), null, null, null, null);
+        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 1));
 
-        save = flowRepository.find(Pageable.from(1),null, null, "io.kestra.tests.minimal.bis", Collections.emptyMap());
+        save = flowRepository.find(Pageable.from(1, (int) Helpers.FLOWS_COUNT + 1, Sort.UNSORTED), null, null, null, null);
+        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT));
+
+        save = flowRepository.find(Pageable.from(1), null, null, "io.kestra.tests.minimal.bis", Collections.emptyMap());
         assertThat((long) save.size(), is(1L));
 
-        save = flowRepository.find(Pageable.from(1),null, null, "io.kestra.tests", Map.of("key1", "value1"));
+        save = flowRepository.find(Pageable.from(1, 100, Sort.UNSORTED), null, null, null, Map.of("country", "FR"));
+        assertThat(save.size(), is(1));
+
+        save = flowRepository.find(Pageable.from(1), null, null, "io.kestra.tests", Map.of("key2", "value2"));
         assertThat((long) save.size(), is(1L));
 
-        save = flowRepository.find(Pageable.from(1),null, null, "io.kestra.tests", Map.of("key1", "value2"));
+        save = flowRepository.find(Pageable.from(1), null, null, "io.kestra.tests", Map.of("key1", "value2"));
         assertThat((long) save.size(), is(0L));
     }
 
@@ -270,8 +343,14 @@ public abstract class AbstractFlowRepositoryTest {
     void delete() {
         Flow flow = builder().build();
 
-        Flow save = flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
-        assertThat(flowRepository.findById(null, save.getNamespace(), save.getId()).isPresent(), is(true));
+        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
+
+        try {
+            assertThat(flowRepository.findById(null, save.getNamespace(), save.getId()).isPresent(), is(true));
+        } catch (Throwable e) {
+            deleteFlow(save);
+            throw e;
+        }
 
         Flow delete = flowRepository.delete(save);
 
@@ -279,7 +358,7 @@ public abstract class AbstractFlowRepositoryTest {
         assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId(), Optional.of(save.getRevision())).isPresent(), is(true));
 
         List<FlowWithSource> revisions = flowRepository.findRevisions(null, flow.getNamespace(), flow.getId());
-        assertThat(revisions.get(revisions.size() - 1).getRevision(), is(delete.getRevision()));
+        assertThat(revisions.getLast().getRevision(), is(delete.getRevision()));
     }
 
     @Test
@@ -289,30 +368,32 @@ public abstract class AbstractFlowRepositoryTest {
         Flow flow = Flow.builder()
             .id(flowId)
             .namespace("io.kestra.unittest")
-            .inputs(ImmutableList.of(StringInput.builder().type(Input.Type.STRING).name("a").build()))
+            .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("a").build()))
             .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
             .build();
 
-        Flow save = flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
+        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
 
-        assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
+        try {
+            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
 
-        Flow update = Flow.builder()
-            .id(IdUtils.create())
-            .namespace("io.kestra.unittest2")
-            .inputs(ImmutableList.of(StringInput.builder().type(Input.Type.STRING).name("b").build()))
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
-            .build();
-        ;
+            Flow update = Flow.builder()
+                .id(IdUtils.create())
+                .namespace("io.kestra.unittest2")
+                .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("b").build()))
+                .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
+                .build();
+            ;
 
-        ConstraintViolationException e = assertThrows(
-            ConstraintViolationException.class,
-            () -> flowRepository.update(update, flow, update.generateSource(), taskDefaultService.injectDefaults(update))
-        );
+            ConstraintViolationException e = assertThrows(
+                ConstraintViolationException.class,
+                () -> flowRepository.update(update, flow, update.generateSource(), pluginDefaultService.injectDefaults(update))
+            );
 
-        assertThat(e.getConstraintViolations().size(), is(2));
-
-        flowRepository.delete(save);
+            assertThat(e.getConstraintViolations().size(), is(2));
+        } finally {
+            deleteFlow(save);
+        }
     }
 
     @Test
@@ -329,20 +410,22 @@ public abstract class AbstractFlowRepositoryTest {
             .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
             .build();
 
-        flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
-        assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
+        flow = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
+        try {
+            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
 
-        Flow update = Flow.builder()
-            .id(flowId)
-            .namespace("io.kestra.unittest")
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
-            .build();
-        ;
+            Flow update = Flow.builder()
+                .id(flowId)
+                .namespace("io.kestra.unittest")
+                .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
+                .build();
+            ;
 
-        Flow updated = flowRepository.update(update, flow, update.generateSource(), taskDefaultService.injectDefaults(update));
-        assertThat(updated.getTriggers(), is(nullValue()));
-
-        flowRepository.delete(updated);
+            Flow updated = flowRepository.update(update, flow, update.generateSource(), pluginDefaultService.injectDefaults(update));
+            assertThat(updated.getTriggers(), is(nullValue()));
+        } finally {
+            deleteFlow(flow);
+        }
 
         Await.until(() -> FlowListener.getEmits().size() == 3, Duration.ofMillis(100), Duration.ofSeconds(5));
         assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.CREATE).count(), is(1L));
@@ -365,11 +448,12 @@ public abstract class AbstractFlowRepositoryTest {
             .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
             .build();
 
-        Flow save = flowRepository.create(flow, flow.generateSource(), taskDefaultService.injectDefaults(flow));
-
-        assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
-
-        flowRepository.delete(save);
+        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
+        try {
+            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
+        } finally {
+            deleteFlow(save);
+        }
 
         Await.until(() -> FlowListener.getEmits().size() == 2, Duration.ofMillis(100), Duration.ofSeconds(5));
         assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.CREATE).count(), is(1L));
@@ -379,9 +463,10 @@ public abstract class AbstractFlowRepositoryTest {
     @Test
     void findDistinctNamespace() {
         List<String> distinctNamespace = flowRepository.findDistinctNamespace(null);
-        assertThat((long) distinctNamespace.size(), is(4L));
+        assertThat((long) distinctNamespace.size(), is(5L));
     }
 
+    @SuppressWarnings("deprecation")
     @Test
     void templateDisabled() {
         Template template = Template.builder()
@@ -403,31 +488,77 @@ public abstract class AbstractFlowRepositoryTest {
             .tasks(Collections.singletonList(templateSpy))
             .build();
 
-        flowRepository.create(
+        flow = flowRepository.create(
             flow,
             flow.generateSource(),
             flow
         );
 
-        Optional<Flow> found = flowRepository.findById(null, flow.getNamespace(), flow.getId());
+        try {
+            Optional<Flow> found = flowRepository.findById(null, flow.getNamespace(), flow.getId());
 
-        assertThat(found.isPresent(), is(true));
-        assertThat(found.get() instanceof FlowWithException, is(true));
-        assertThat(((FlowWithException) found.get()).getException(), containsString("Templates are disabled"));
+            assertThat(found.isPresent(), is(true));
+            assertThat(found.get() instanceof FlowWithException, is(true));
+            assertThat(((FlowWithException) found.get()).getException(), containsString("Templates are disabled"));
+        } finally {
+            deleteFlow(flow);
+        }
     }
 
+    @Test
+    protected void lastRevision() {
+        String namespace = "io.kestra.unittest";
+        String flowId = IdUtils.create();
+        String tenantId = "tenant";
+
+        assertThat(flowRepository.lastRevision(tenantId, namespace, flowId), nullValue());
+
+        // create with builder
+        Flow first = Flow.builder()
+            .tenantId(tenantId)
+            .id(flowId)
+            .namespace(namespace)
+            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format("test").build()))
+            .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("a").build()))
+            .build();
+        // create with repository
+        first = flowRepository.create(first, first.generateSource(), pluginDefaultService.injectDefaults(first));
+        try {
+            assertThat(flowRepository.lastRevision(tenantId, namespace, flowId), is(1));
+
+            // submit new one with change
+
+            Flow flowRev2 = first.toBuilder()
+                .tasks(Collections.singletonList(
+                    Log.builder()
+                        .id(IdUtils.create())
+                        .type(Log.class.getName())
+                        .message("Hello World")
+                        .build()
+                ))
+                .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("b").build()))
+                .build();
+
+            first = flowRepository.update(flowRev2, first, flowRev2.generateSource(), pluginDefaultService.injectDefaults(flowRev2));
+            assertThat(flowRepository.lastRevision(tenantId, namespace, flowId), is(2));
+        } finally {
+            deleteFlow(first);
+        }
+    }
+
+    private void deleteFlow(Flow flow) {
+        Integer revision = flowRepository.lastRevision(flow.getTenantId(), flow.getNamespace(), flow.getId());
+        flowRepository.delete(flow.toBuilder().revision(revision).build());
+    }
 
     @Singleton
     public static class FlowListener implements ApplicationEventListener<CrudEvent<Flow>> {
+        @Getter
         private static List<CrudEvent<Flow>> emits = new ArrayList<>();
 
         @Override
         public void onApplicationEvent(CrudEvent<Flow> event) {
             emits.add(event);
-        }
-
-        public static List<CrudEvent<Flow>> getEmits() {
-            return emits;
         }
 
         public static void reset() {
