@@ -2,27 +2,29 @@ package io.kestra.core.repositories;
 
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.executions.LogEntry;
+import io.kestra.core.models.executions.statistics.LogStatistics;
 import io.kestra.core.utils.IdUtils;
 import io.micronaut.data.model.Pageable;
-import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
+import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 import org.slf4j.event.Level;
 
 import java.time.Instant;
+import java.time.ZonedDateTime;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
-@MicronautTest(transactional = false)
+@KestraTest
 public abstract class AbstractLogRepositoryTest {
     @Inject
     protected LogRepositoryInterface logRepository;
 
     private static LogEntry.LogEntryBuilder logEntry(Level level) {
         return LogEntry.builder()
-            .flowId(IdUtils.create())
+            .flowId("flowId")
             .namespace("io.kestra.unittest")
             .taskId("taskId")
             .executionId(IdUtils.create())
@@ -45,34 +47,42 @@ public abstract class AbstractLogRepositoryTest {
 
         find = logRepository.find(Pageable.UNPAGED, "doe", null, null, null, null, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getExecutionId(), is(save.getExecutionId()));
+        assertThat(find.getFirst().getExecutionId(), is(save.getExecutionId()));
 
         find = logRepository.find(Pageable.UNPAGED,  "doe", null, null, null, Level.WARN,null,  null);
         assertThat(find.size(), is(0));
 
         find = logRepository.find(Pageable.UNPAGED, null, null, null, null, null, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getExecutionId(), is(save.getExecutionId()));
+        assertThat(find.getFirst().getExecutionId(), is(save.getExecutionId()));
 
         logRepository.find(Pageable.UNPAGED, "kestra-io/kestra", null, null, null, null, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getExecutionId(), is(save.getExecutionId()));
+        assertThat(find.getFirst().getExecutionId(), is(save.getExecutionId()));
 
         List<LogEntry> list = logRepository.findByExecutionId(null, save.getExecutionId(), null);
         assertThat(list.size(), is(1));
-        assertThat(list.get(0).getExecutionId(), is(save.getExecutionId()));
+        assertThat(list.getFirst().getExecutionId(), is(save.getExecutionId()));
+
+        list = logRepository.findByExecutionId(null, "io.kestra.unittest", "flowId", save.getExecutionId(), null);
+        assertThat(list.size(), is(1));
+        assertThat(list.getFirst().getExecutionId(), is(save.getExecutionId()));
 
         list = logRepository.findByExecutionIdAndTaskId(null, save.getExecutionId(), save.getTaskId(), null);
         assertThat(list.size(), is(1));
-        assertThat(list.get(0).getExecutionId(), is(save.getExecutionId()));
+        assertThat(list.getFirst().getExecutionId(), is(save.getExecutionId()));
+
+        list = logRepository.findByExecutionIdAndTaskId(null, "io.kestra.unittest", "flowId", save.getExecutionId(), save.getTaskId(), null);
+        assertThat(list.size(), is(1));
+        assertThat(list.getFirst().getExecutionId(), is(save.getExecutionId()));
 
         list = logRepository.findByExecutionIdAndTaskRunId(null, save.getExecutionId(), save.getTaskRunId(), null);
         assertThat(list.size(), is(1));
-        assertThat(list.get(0).getExecutionId(), is(save.getExecutionId()));
+        assertThat(list.getFirst().getExecutionId(), is(save.getExecutionId()));
 
         list = logRepository.findByExecutionIdAndTaskRunIdAndAttempt(null, save.getExecutionId(), save.getTaskRunId(), null, 0);
         assertThat(list.size(), is(1));
-        assertThat(list.get(0).getExecutionId(), is(save.getExecutionId()));
+        assertThat(list.getFirst().getExecutionId(), is(save.getExecutionId()));
 
         Integer countDeleted = logRepository.purge(Execution.builder().id(save.getExecutionId()).build());
         assertThat(countDeleted, is(1));
@@ -82,7 +92,7 @@ public abstract class AbstractLogRepositoryTest {
     }
 
     @Test
-    void Pageable() {
+    void pageable() {
         String executionId = "123";
         LogEntry.LogEntryBuilder builder = logEntry(Level.INFO);
         builder.executionId(executionId);
@@ -125,5 +135,47 @@ public abstract class AbstractLogRepositoryTest {
         find = logRepository.findByExecutionIdAndTaskRunId(null, executionId, logEntry2.getTaskRunId(), null, Pageable.from(10, 10));
 
         assertThat(find.size(), is(0));
+    }
+
+    @Test
+    void delete() {
+        LogEntry log1 = logEntry(Level.INFO).build();
+        logRepository.save(log1);
+
+        logRepository.deleteByQuery(null, log1.getExecutionId(), null, (String) null, null, null);
+
+        ArrayListTotal<LogEntry> find = logRepository.findByExecutionId(null, log1.getExecutionId(), null, Pageable.from(1, 50));
+        assertThat(find.size(), is(0));
+
+        logRepository.save(log1);
+
+        logRepository.deleteByQuery(null, "io.kestra.unittest", "flowId", null, null, ZonedDateTime.now().plusMinutes(1));
+
+        find = logRepository.findByExecutionId(null, log1.getExecutionId(), null, Pageable.from(1, 50));
+        assertThat(find.size(), is(0));
+    }
+
+    @Test
+    void statistics() throws InterruptedException {
+        for (int i = 0; i < 28; i++) {
+            logRepository.save(
+                logEntry(i < 5 ? Level.TRACE : (i < 8 ? Level.INFO : Level.ERROR))
+                    .flowId(i < 15 ? "first" : "second")
+                    .build()
+            );
+        }
+
+        // mysql need some time ...
+        Thread.sleep(500);
+
+        List<LogStatistics> list = logRepository.statistics(null, null, null, "first", null, null, null, null);
+        assertThat(list.size(), is(31));
+        assertThat(list.stream().filter(logStatistics -> logStatistics.getCounts().get(Level.TRACE) == 5).count(), is(1L));
+        assertThat(list.stream().filter(logStatistics -> logStatistics.getCounts().get(Level.INFO) == 3).count(), is(1L));
+        assertThat(list.stream().filter(logStatistics -> logStatistics.getCounts().get(Level.ERROR) == 7).count(), is(1L));
+
+        list = logRepository.statistics(null, null, null, "second", null, null, null, null);
+        assertThat(list.size(), is(31));
+        assertThat(list.stream().filter(logStatistics -> logStatistics.getCounts().get(Level.ERROR) == 13).count(), is(1L));
     }
 }
