@@ -2,7 +2,6 @@ package io.kestra.core.runners;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.io.CharStreams;
-import io.kestra.core.exceptions.MissingRequiredInput;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.State;
@@ -11,7 +10,7 @@ import io.kestra.core.storages.StorageInterface;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 
-import javax.validation.ConstraintViolationException;
+import jakarta.validation.ConstraintViolationException;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -22,6 +21,7 @@ import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeoutException;
@@ -30,10 +30,10 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-@SuppressWarnings("OptionalGetWithoutIsPresent")
 public class InputsTest extends AbstractMemoryRunnerTest {
     public static Map<String, Object> inputs = ImmutableMap.<String, Object>builder()
         .put("string", "myString")
+        .put("enum", "ENUM_VALUE")
         .put("int", "42")
         .put("float", "42.42")
         .put("bool", "false")
@@ -41,7 +41,7 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         .put("date", "2019-10-06")
         .put("time", "18:27:49")
         .put("duration", "PT5M6S")
-        .put("file", Objects.requireNonNull(InputsTest.class.getClassLoader().getResource("application.yml")).getPath())
+        .put("file", Objects.requireNonNull(InputsTest.class.getClassLoader().getResource("application-test.yml")).getPath())
         .put("json", "{\"a\": \"b\"}")
         .put("uri", "https://www.google.com")
         .put("nested.string", "a string")
@@ -54,6 +54,8 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         .put("validatedDuration", "PT15S")
         .put("validatedFloat", "0.42")
         .put("validatedTime", "11:27:49")
+        .put("secret", "secret")
+        .put("array", "[1, 2, 3]")
         .build();
 
     @Inject
@@ -62,17 +64,21 @@ public class InputsTest extends AbstractMemoryRunnerTest {
     @Inject
     private StorageInterface storageInterface;
 
+    @Inject
+    private FlowInputOutput flowIO;
+
     private Map<String, Object> typedInputs(Map<String, Object> map) {
         return typedInputs(map, flowRepository.findById(null, "io.kestra.tests", "inputs").get());
     }
 
     private Map<String, Object> typedInputs(Map<String, Object> map, Flow flow) {
-        return runnerUtils.typedInputs(
+        return flowIO.typedInputs(
             flow,
             Execution.builder()
                 .id("test")
-                .namespace("test")
+                .namespace(flow.getNamespace())
                 .flowRevision(1)
+                .flowId(flow.getId())
                 .build(),
             map
         );
@@ -80,9 +86,9 @@ public class InputsTest extends AbstractMemoryRunnerTest {
 
     @Test
     void missingRequired() {
-        assertThrows(IllegalArgumentException.class, () -> {
-            typedInputs(new HashMap<>());
-        });
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(new HashMap<>()));
+
+        assertThat(e.getMessage(), containsString("Invalid input for `string`, missing required input, but received `null`"));
     }
 
     @Test
@@ -108,7 +114,7 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         assertThat(typeds.get("date"), is(LocalDate.parse("2019-10-06")));
         assertThat(typeds.get("time"), is(LocalTime.parse("18:27:49")));
         assertThat(typeds.get("duration"), is(Duration.parse("PT5M6S")));
-        assertThat((URI) typeds.get("file"), is(new URI("kestra:///io/kestra/tests/inputs/executions/test/inputs/file/application.yml")));
+        assertThat((URI) typeds.get("file"), is(new URI("kestra:///io/kestra/tests/inputs/executions/test/inputs/file/application-test.yml")));
         assertThat(
             CharStreams.toString(new InputStreamReader(storageInterface.get(null, (URI) typeds.get("file")))),
             is(CharStreams.toString(new InputStreamReader(new FileInputStream((String) inputs.get("file")))))
@@ -125,16 +131,21 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         assertThat(typeds.get("validatedDuration"), is(Duration.parse("PT15S")));
         assertThat(typeds.get("validatedFloat"), is(0.42F));
         assertThat(typeds.get("validatedTime"), is(LocalTime.parse("11:27:49")));
+        assertThat(typeds.get("secret"), not("secret")); // secret inputs are encrypted
+        assertThat(typeds.get("array"), instanceOf(List.class));
+        assertThat((List<String>)typeds.get("array"), hasSize(3));
+        assertThat((List<String>)typeds.get("array"), contains(1, 2, 3));
     }
 
     @Test
-    void allValidTypedInputs() throws URISyntaxException, IOException {
+    void allValidTypedInputs() {
         Map<String, Object> typeds = typedInputs(inputs);
         typeds.put("int", 42);
         typeds.put("float", 42.42F);
         typeds.put("bool", false);
 
         assertThat(typeds.get("string"), is("myString"));
+        assertThat(typeds.get("enum"), is("ENUM_VALUE"));
         assertThat(typeds.get("int"), is(42));
         assertThat(typeds.get("float"), is(42.42F));
         assertThat(typeds.get("bool"), is(false));
@@ -147,14 +158,24 @@ public class InputsTest extends AbstractMemoryRunnerTest {
             "io.kestra.tests",
             "inputs",
             null,
-            (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs)
+            (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs)
         );
 
-        assertThat(execution.getTaskRunList(), hasSize(5));
+        assertThat(execution.getTaskRunList(), hasSize(13));
         assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
         assertThat(
-            (String) execution.findTaskRunsByTaskId("file").get(0).getOutputs().get("value"),
-            matchesRegex("kestra:///io/kestra/tests/inputs/executions/.*/inputs/file/application.yml")
+            (String) execution.findTaskRunsByTaskId("file").getFirst().getOutputs().get("value"),
+            matchesRegex("kestra:///io/kestra/tests/inputs/executions/.*/inputs/file/application-test.yml")
+        );
+        // secret inputs are decrypted to be used as task properties
+        assertThat(
+            (String) execution.findTaskRunsByTaskId("secret").getFirst().getOutputs().get("value"),
+            is("secret")
+        );
+        // null inputs are serialized
+        assertThat(
+            (String) execution.findTaskRunsByTaskId("optional").getFirst().getOutputs().get("value"),
+            emptyString()
         );
     }
 
@@ -163,125 +184,99 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         HashMap<String, Object> map = new HashMap<>(inputs);
         map.put("validatedString", "foo");
 
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(map);
-        });
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
 
-        assertThat(e.getMessage(), is("Invalid input 'foo', it must match the pattern 'A\\d+'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedString`, it must match the pattern"));
     }
 
     @Test
     void inputValidatedIntegerBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedInt", "9");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '9', it must be more than '10'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedInt`, it must be more than `10`, but received `9`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedInt", "21");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '21', it must be less than '20'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedInt`, it must be less than `20`, but received `21`"));
     }
 
     @Test
     void inputValidatedDateBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedDate", "2022-01-01");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '2022-01-01', it must be after '2023-01-01'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDate`, it must be after `2023-01-01`, but received `2022-01-01`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedDate", "2024-01-01");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '2024-01-01', it must be before '2023-12-31'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDate`, it must be before `2023-12-31`, but received `2024-01-01`"));
     }
 
     @Test
     void inputValidatedDateTimeBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedDateTime", "2022-01-01T00:00:00Z");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '2022-01-01T00:00:00Z', it must be after '2023-01-01T00:00:00Z'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDateTime`, it must be after `2023-01-01T00:00:00Z`, but received `2022-01-01T00:00:00Z`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedDateTime", "2024-01-01T00:00:00Z");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '2024-01-01T00:00:00Z', it must be before '2023-12-31T23:59:59Z'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDateTime`, it must be before `2023-12-31T23:59:59Z`"));
     }
 
     @Test
     void inputValidatedDurationBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedDuration", "PT1S");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input 'PT1S', it must be more than 'PT10S'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDuration`, It must be more than `PT10S`, but received `PT1S`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedDuration", "PT30S");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input 'PT30S', it must be less than 'PT20S'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDuration`, It must be less than `PT20S`, but received `PT30S`"));
     }
 
     @Test
     void inputValidatedFloatBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedFloat", "0.01");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '0.01', it must be more than '0.1'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedFloat`, it must be more than `0.1`, but received `0.01`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedFloat", "1.01");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '1.01', it must be less than '0.5'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedFloat`, it must be less than `0.5`, but received `1.01`"));
     }
 
     @Test
     void inputValidatedTimeBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedTime", "00:00:01");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '00:00:01', it must be after '01:00'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedTime`, it must be after `01:00`, but received `00:00:01`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedTime", "14:00:00");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '14:00', it must be before '11:59:59'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedTime`, it must be before `11:59:59`, but received `14:00:00`"));
     }
 
     @Test
@@ -289,10 +284,60 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         HashMap<String, Object> map = new HashMap<>(inputs);
         map.put("uri", "http:/bla");
 
-        MissingRequiredInput e = assertThrows(MissingRequiredInput.class, () -> {
-            Map<String, Object> typeds = typedInputs(map);
-        });
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
 
-        assertThat(e.getMessage(), containsString("Invalid URI format"));
+        assertThat(e.getMessage(), containsString("Invalid input for `uri`, Expected `URI` but received `http:/bla`, but received `http:/bla`"));
+    }
+
+    @Test
+    void inputEnumFailed() {
+        HashMap<String, Object> map = new HashMap<>(inputs);
+        map.put("enum", "INVALID");
+
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
+
+        assertThat(e.getMessage(), is("enum: Invalid input for `enum`, it must match the values `[ENUM_VALUE, OTHER_ONE]`, but received `INVALID`"));
+    }
+
+    @Test
+    void inputArrayFailed() {
+        HashMap<String, Object> map = new HashMap<>(inputs);
+        map.put("array", "[\"s1\", \"s2\"]");
+
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
+
+        assertThat(e.getMessage(), containsString("Invalid input for `array`, Unable to parse array element as `INT` on `s1`, but received `[\"s1\", \"s2\"]`"));
+    }
+
+    @Test
+    void inputEmptyJson() {
+        HashMap<String, Object> map = new HashMap<>(inputs);
+        map.put("json", "{}");
+
+        Map<String, Object> typeds = typedInputs(map);
+
+        assertThat(typeds.get("json"), instanceOf(Map.class));
+        assertThat(((Map<?, ?>) typeds.get("json")).size(), is(0));
+    }
+
+    @Test
+    void inputEmptyJsonFlow() throws TimeoutException {
+        HashMap<String, Object> map = new HashMap<>(inputs);
+        map.put("json", "{}");
+
+        Execution execution = runnerUtils.runOne(
+            null,
+            "io.kestra.tests",
+            "inputs",
+            null,
+            (flow, execution1) -> flowIO.typedInputs(flow, execution1, map)
+        );
+
+        assertThat(execution.getTaskRunList(), hasSize(13));
+        assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
+
+        assertThat(execution.getInputs().get("json"), instanceOf(Map.class));
+        assertThat(((Map<?, ?>) execution.getInputs().get("json")).size(), is(0));
+        assertThat((String) execution.findTaskRunsByTaskId("jsonOutput").getFirst().getOutputs().get("value"), is("{}"));
     }
 }
