@@ -1,12 +1,23 @@
 package io.kestra.repository.h2;
 
+import io.kestra.core.queues.QueueService;
 import io.kestra.core.repositories.ArrayListTotal;
+import io.kestra.jdbc.JdbcTableConfig;
+import io.kestra.jdbc.JooqDSLContextWrapper;
 import io.kestra.jdbc.repository.AbstractJdbcRepository;
-import io.micronaut.context.ApplicationContext;
+import io.micronaut.context.annotation.EachBean;
+import io.micronaut.context.annotation.Parameter;
 import io.micronaut.data.model.Pageable;
+import jakarta.inject.Inject;
 import lombok.SneakyThrows;
-import org.jooq.*;
+import org.jooq.Condition;
+import org.jooq.DSLContext;
+import org.jooq.Field;
+import org.jooq.LikeEscapeStep;
 import org.jooq.Record;
+import org.jooq.RecordMapper;
+import org.jooq.Result;
+import org.jooq.SelectConditionStep;
 import org.jooq.impl.DSL;
 
 import java.util.Arrays;
@@ -14,13 +25,20 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Collectors;
-import javax.annotation.Nullable;
+import jakarta.annotation.Nullable;
 
+@H2RepositoryEnabled
+@EachBean(JdbcTableConfig.class)
 public class H2Repository<T> extends io.kestra.jdbc.AbstractJdbcRepository<T> {
-    public H2Repository(Class<T> cls, ApplicationContext applicationContext) {
-        super(cls, applicationContext);
+
+    @Inject
+    public H2Repository(@Parameter JdbcTableConfig jdbcTableConfig,
+                        QueueService queueService,
+                        JooqDSLContextWrapper dslContextWrapper) {
+        super(jdbcTableConfig, queueService, dslContextWrapper);
     }
 
+    @Override
     @SneakyThrows
     public void persist(T entity, DSLContext context, @Nullable Map<Field<Object>, Object> fields) {
         Map<Field<Object>, Object> finalFields = fields == null ? this.persistFields(entity) : fields;
@@ -49,12 +67,12 @@ public class H2Repository<T> extends io.kestra.jdbc.AbstractJdbcRepository<T> {
             throw new IllegalStateException("Too many fields for h2 '" + fields + "'");
         }
 
-        Field<Object> field = AbstractJdbcRepository.field(fields.get(0));
+        Field<Object> field = AbstractJdbcRepository.field(fields.getFirst());
 
         List<LikeEscapeStep> match = Arrays
             .stream(query.split("\\p{P}|\\p{S}|\\p{Z}"))
             .map(s -> field.likeIgnoreCase("%" + s.toUpperCase(Locale.ROOT) + "%"))
-            .collect(Collectors.toList());
+            .toList();
 
         if (match.size() == 0) {
             return DSL.falseCondition();
@@ -76,7 +94,7 @@ public class H2Repository<T> extends io.kestra.jdbc.AbstractJdbcRepository<T> {
             )
             .fetch();
 
-        Integer totalCount = results.size() > 0 ? results.get(0).get("total_count", Integer.class) : 0;
+        Integer totalCount = results.size() > 0 ? results.getFirst().get("total_count", Integer.class) : 0;
 
         List<E> map = results
             .map((Record record) -> mapper.map((R) record));
